--- a/publications_topics.html
+++ b/publications_topics.html
@@ -118,6 +118,9 @@ p{ margin:10px auto}
 <p lang="en-US"><span class="blue"> Distributed and Parallel Computing </span></p>
 
 
+<p><span class="style11">&bull; M. Zhang, G. Li, C. Guo, R. Yang, S. Wang, H. Bao, X. Li, M. Xu, T. Wo, C. Hu.  SuperFE: A Scalable and Flexible Feature Extractor for ML-based Traffic Analysis Applications. in the 20th ACM EuroSys 2025 <a href="paper/eurosys2025.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a></span></p>
+
+
 <p><span class="style11">&bull; R. Yang and J. Xu. Resilient QoS-Aware Workload Co-Scheduling and User Anomaly Detection in Shared Computing Clusters, the UK Alan Turing Institute Workshop on Edge-Cloud Infrastructure for Distributed Intelligent Computing, 2023  
 	<a href="paper/ati2023-poster.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>  
 	</span></p>
@@ -203,6 +206,13 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2020
 	<a href="paper/euro2024.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>  
 	</span></p>	
 
+<p><span class="style11">&bull; J. Wang, G. Wang, T. Wo, X. Wang and R. Yang*. RESCAPE: A Resource Estimation System for Microservices with Graph Neural Networks and Profile Engine. The 15th IEEE Joint Cloud Conference (JCC) <span class="red">(Best Paper Award)</span>
+<a href="paper/jcc2024-rescape.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>  
+</span></p>	 
+		
+<p><span class="style11">&bull; W. Peng, J. Wang, T. Wo and R. Yang*. PrecisionProbe: Non-intrusive Performance Analysis Tool for Deep Learning Recommendation Models. The 15th IEEE Joint Cloud Conference (JCC) 
+<a href="paper/jcc2024-probe.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>  
+</span></p>	 
 
 <p><span class="style11">&bull; R. Yang. Efficient and Reliable Resource Scheduling at Internet Scale: Theory and Practice, PhD. thesis, 2017 <span class="red"> (with Honor, Outstanding Graduate Award of Beijing Graduates)</span>
 </span></p>
@@ -282,8 +292,14 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019
 <p><span class="style11">&bull; Y. Yang, Q. Wu, B. He, H. Peng, R. Yang, Z. Hao, Y. Liao. SEBot: Structural Entropy Guided Multi-View Contrastive learning for Social Bot Detection. The 30th ACM SIGKDD Conference on Knowledge Discovery and Data Mining (KDD), 2024 <a href="paper/kdd2024-sebot.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a> </span></p>
 
 <p><span class="style11">&bull; B. Qian, Y. Xuan, D. Wu, Z. Wen, R. Yang, S. He, J. Chen, and R. Ranjan. Edge-Cloud Collaborative Streaming Video Analytics with Multi-agent Deep Reinforcement Learning. IEEE Network. 2024 
-	<a href="paper/network2024.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>  
-	</span></p>	 
+<a href="paper/network2024.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>  
+</span></p>	 
+
+
+<p><span class="style11">&bull; Q. Wu, Y. Yang, H. Liu, R. Yang, Y. Liao, P. Zhou.  BotSCL: Heterophily-aware Social Bot Detection with Supervised Contrastive Learning. The 27th International Conference on Pattern Recognition (ICPR)
+<a href="paper/icpr2024.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>  
+</span></p>	 
+	
 
 <p><span class="style11">&bull; J. Zhao, R. Yang, S. Qiu, Z. Wang. Unleashing the Potential of Acquisition Functions in High Dimensional Bayesian Optimization. Transactions on Machine Learning Research (TMLR), 2024 <a href="paper/tmlr2024.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a> </span></p>
 
