--- a/index.html
+++ b/index.html
@@ -199,6 +199,10 @@ p{ margin:10px auto}
 
 <p><span class="style11"> <img src="icons/bell.gif" width="14" height="12" border="0"/> (06/2023) RAIDS Lab is open and we are recruiting young talents! <span class="red">Postdoc/PhD/MSc/undergraduate intern positions are open to apply! </span> Drop me an email if you are interested... </span></p>
 
+<p><span class="style11"> (22/08/2024) Our work on Advanced Feature Engineering for Intelligent Traffic Analysis Applications is accepted by ACM EuroSys 2025. </span></p>
+
+<p><span class="style11"> (20/07/2024) Our work on GNN-based resource estimation for microservices received the best paper award of IEEE JCC 2024.  Congrats to Jinghao! </span></p>
+
 <p><span class="style11"> (17/05/2024) Two papers are accepted by ACM KDD 2024. Big congrats to Rui, Xudong and Yingguang! </span></p>
 
 <p><span class="style11"> (16/04/2024) Our work on Dynamic Graph Transformers for Bot Detection is accepted by IJCAI 2024. </span></p>
@@ -229,10 +233,10 @@ p{ margin:10px auto}
 	deep learning systems and applications such as graph representation learning, anomaly detection, etc.
 </span>
 
-<p><span class="style11"> I have published 60+ refereed journal and conference papers (<a href="http://scholar.google.com/citations?user=H_x5laoAAAAJ&hl=en" style="text-decoration: none">Googe Scholar</a> ~2,600 citations, h-index=24, by April. 2024), 
+<p><span class="style11"> I have published 70+ refereed journal and conference papers (<a href="http://scholar.google.com/citations?user=H_x5laoAAAAJ&hl=en" style="text-decoration: none">Googe Scholar</a> ~2,900 citations, h-index=24, by August 2024), 
 	including top ACM/IEEE Transactions and conference proceedings such as TPDS, TC, TKDE, TNNLS, TSC, TOIS, ACM Computing Surveys (CSUR), 
-	VLDB, ICDE, WWW, KDD, SC, ICDCS, DSN, etc. I won the Best Paper Award in IEEE ISADS 2013 for energy-efficient computing and Alan Turing Institute Post-Doctoral 
-	Enrichment Award 2022 for resilient deep reinforcement learning, and was awarded the Grand Class of Scientific and 
+	VLDB, ICDE, WWW, KDD, EuroSys, SC, ICDCS, DSN, etc. I received the Best Paper Award of IEEE ISADS 2013 and IEEE JCC 2024, and awarded Alan Turing Institute Post-Doctoral 
+	Enrichment Award 2022 and the Grand Class of Scientific and 
 	Technological Progress Award of Chinese Institute of Electronics of year 2017 (the only grand class award since the award is established) 
 	for the key contribution to the reliable resource management at massive scale and its industrial and societal impact.
 </span>
@@ -256,7 +260,7 @@ p{ margin:10px auto}
 <p><span class="Bolder"><!--img src="icons/research-banner.png" width="25" height="25" border="0"/--> Research Interests</span></p>
 <p><span class="style11">Broadly, I am interested in designing system modules and/or mechanisms for tackling trade-offs in efficiency, performance, reliability and cost for distributed and parallel computing systems at scale such as cloud computing, big data, deep learning training/inference, IoT, etc. My research mainly focuses on: </span></p>
 	<p><span class="style11">&bull; <strong>Enhanced resource efficiency of large-scale computing infrastructures:</strong>
-		QoS-aware resource management [<a href="paper/vldb2014.pdf" style="text-decoration: none">VLDB'14</a>, <a href="paper/icdcs2018.pdf" style="text-decoration: none">ICDCS'18</a>, <a href="paper/socc2019-perphon.pdf" style="text-decoration: none">SoCC'19</a>, <a href="paper/tpds2020-rose.pdf" style="text-decoration: none">TPDS'20a</a>, <a href="paper/ccgrid2021.pdf" style="text-decoration: none">CCGRID'21</a>, <a href="paper/tpds2022-toposcaling.pdf" style="text-decoration: none">TPDS'22a</a>, <a href="paper/tsc2023.pdf" style="text-decoration: none">TSC'23</a>], 
+		QoS-aware resource management [<a href="paper/vldb2014.pdf" style="text-decoration: none">VLDB'14</a>, <a href="paper/icdcs2018.pdf" style="text-decoration: none">ICDCS'18</a>, <a href="paper/socc2019-perphon.pdf" style="text-decoration: none">SoCC'19</a>, <a href="paper/tpds2020-rose.pdf" style="text-decoration: none">TPDS'20a</a>, <a href="paper/ccgrid2021.pdf" style="text-decoration: none">CCGRID'21</a>, <a href="paper/tpds2022-toposcaling.pdf" style="text-decoration: none">TPDS'22a</a>, <a href="paper/tsc2023.pdf" style="text-decoration: none">TSC'23</a>, <a href="paper/eurosys2025.pdf" style="text-decoration: none">EuroSys'25</a>], 
 		DL model training acceleration [<a href="paper/tpds2021-horus.pdf" style="text-decoration: none">TPDS'22b</a>,<a href="paper/sc2022.pdf" style="text-decoration: none">SC'22</a>], 
 		and multi-objective optimization [<a href="paper/tpds2019-gapar-full.pdf" style="text-decoration: none">TPDS'20b</a>, <a href="paper/jpdc2021-elsevier.pdf" style="text-decoration: none">JPDC'21</a>, <a href="paper/secon2022.pdf" style="text-decoration: none">SECON'22</a>, <a href="paper/jpdc2023.pdf" style="text-decoration: none">JPDC'23</a>], etc.; </span></p>
 	<p><span class="style11">&bull; <strong>Enhanced system dependability:</strong>
@@ -304,6 +308,7 @@ p{ margin:10px auto}
 <div id="div_pub">
 
 <p><span class="Bolder"><!--img src="icons/paper-banner.png" width="25" height="25" border="0"/--> Selected Recent Publications </span></p>
+<p><span class="style11">&bull; M. Zhang, G. Li, C. Guo, R. Yang, S. Wang, H. Bao, X. Li, M. Xu, T. Wo, C. Hu.  <a href="paper/eurosys2025.pdf" style="text-decoration: none">SuperFE: A Scalable and Flexible Feature Extractor for ML-based Traffic Analysis Applications</a>. ACM EuroSys 2025 <span class="red">(CCF A)</span></span></p>
 
 <p><span class="style11">&bull; R. Wang, X. Mou, R. Yang, K. Gao, P. Liu, C. Liu, T. Wo and X. Liu. <a href="paper/kdd2024-cap.pdf" style="text-decoration: none">CutAddPaste: Time Series Anomaly Detection by Exploiting Abnormal Knowledge</a>. ACM KDD 2024 <span class="red">(CCF A)</span></span></p>
 
@@ -360,17 +365,24 @@ I had the opportunity to work closely with many institutes around the world and 
 
 <p><span class="style11">&bull; Enabling Generic LLMs on PaddlePaddle and AI Chips (¥6.4M), funded by Beijing S&T Commission and Baidu Inc., Co-I, 2024-2025 </span></p> 
 
-<p><span class="style11">&bull; Cloud Native Technology: Theory and Practice (¥100K), funded by Digital Textbook Funding Programme, Beihang University, PI, 2024 </span></p> 
+<p><span class="style11">&bull; Enhancing Model Training and Inference (¥500K), funded by Company X's Research Programme, PI, 2024 - 2025  </span></p> 
+
+<p><span class="style11">&bull; LLMs-Assisted Information Retrieval Platform (¥200K), funded by CAE, PI, 2024  </span></p> 
 
 <p><span class="style11">&bull; Efficient Resource Scheduling for Intelligent Computing Infrastructures (¥200K), funded by Advanced Multidisciplinary Research Programme, Beihang University, PI, 2024 - 2025  </span></p> 
 
+<p><span class="style11">&bull; Cloud Native Technology: Theory and Practice (¥100K), funded by Digital Textbook Funding Programme, Beihang University, PI, 2024 </span></p> 
+
 <p><span class="style11">&bull; Anomaly Management and Decision Making in Massive Custom Manufacturing (¥1.8M), funded by National Key Research and Development Programme, Co-author and Key Member, 2024 - 2026  </span></p> 
+
+<p><span class="style11">&bull; Making Model Training More Reliable (¥400K), funded by Huawei, Co-author and Key Member, 2024 - 2025  </span></p> 
+
+
+<p><span class="style11"> <strong> Closed </strong> </span></p>
 
 <p><span class="style11">&bull; Essentials of Modern Cloud Computing (¥400K), funded by Core Curriculum Redefined Programme, National College of Engineering Excellence, Co-I, 2023 - 2024  </span></p> 
 
 <p><span class="style11">&bull; Algorithmic Scheduling Support for Efficient AI Model Training (¥300K), funded by Kuaishou Research Funding, Co-PI, 2023 - 2024  </span></p> 
-
-<p><span class="style11"> <strong> Closed </strong> </span></p>
 
 <p><span class="style11">&bull; Resilient Multi-Agent Deep Reinforcement Learning for Green Logistics Scheduling, funded by the Turing Enrichment Scheme, the Alan Turing Institute, PI, 2022.3 - 2022.10 </span></p> 
 
@@ -404,24 +416,22 @@ I had the opportunity to work closely with many institutes around the world and 
 
 <p><span class="Bolder"><!--img src="icons/supervision-banner.png" width="25" height="25" border="0"/--> Research Team </span></p>
 
-
 <p><span class="style11"><strong>PhD Students</strong> </span></p>
 <p><span class="style11">&bull; Junhong Liu (2024.9- , BeihangU) </span></p> 
 <p><span class="style11">&bull; Huaqiang Qiu (2024.9- , BeihangU) </span></p> 
 <p><span class="style11">&bull; Rui Wang (2023.9- , BeihangU, w/ Prof. Xudong Liu): KDD'24 </span></p> 
+<p><span class="style11">&bull; Hui Wang (2023.9- , BeihangU, w/ Prof. Xudong Liu) </span></p>
 <p><span class="style11">&bull; Yihui Zhang (2023.9- , BeihangU, w/ Prof. Tianyu Wo) </span></p>
-<p><span class="style11">&bull; Yuyan Zhao (2023.9- , BeihangU, w/ Prof. Tianyu Wo) </span></p>
-<p><span class="style11">&bull; Yulin Su (2023.9- , BeihangU, w/ Prof. Tianyu Wo) </span></p>
 <p><span class="style11">&bull; Jinghao Wang (2023.5- , BeihangU, w/ Prof. Chunming Hu and Dr. Xu Wang) </span></p> 
 <p><span class="style11">&bull; Yang Zhang (2023.9- , BeihangU, w/ Prof. Chunming Hu) </span></p> 
 <p><span class="style11">&bull; Yingguang Yang (2021.7-, USTC, w/ Prof. Yong Liao and Dr. Pengyuan Zhou): TWEB'23, WWW'23, arXiv'23, IJCAI'24, KDD'24 </span></p>
 </div>
 
 <p><span class="style11"><strong>MSc Students</strong> </span></p>
-<p><span class="style11">&bull; [Class 2022] Weihan Jiang, Tianyu Ye, Ziyang Liu, Di Wang, Jia Duan, Hang Xi (co-supervised w/ Prof. Tianyu Wo/Chunming Hu) </span></p>
-<p><span class="style11">&bull; [Class 2023] Zhida Jiang, Yilong Li, Zeying Wang, Jiaxun Huang (co-supervised w/ Prof. Tianyu Wo/Chunming Hu) </span></p>
-<p><span class="style11">&bull; [Class 2024] Zexin Wu; Shiyi Huang (w/ Dr. Xu Wang), Mingming Zhang, Yuxuan Chen, Yuezheng Liu (w/ Prof. Tianyu Wo/Xudong Liu)</span></p>
-<p><span class="style11">&bull; [Part Time]  Yao Zhang, Xiaoyu Liu, Tianyou Zeng, Lu Pei, Jiasheng Liu, Zhiqi Zhang, Haiyang Tang </span></p>
+<p><span class="style11">&bull; [Class 2022] Weihan Jiang, Tianyu Ye, Ziyang Liu, Di Wang (co-supervised w/ Prof. Tianyu Wo/Chunming Hu) </span></p>
+<p><span class="style11">&bull; [Class 2023] Zhida Jiang, Yilong Li, Zeying Wang (co-supervised w/ Prof. Tianyu Wo/Chunming Hu) </span></p>
+<p><span class="style11">&bull; [Class 2024] Zexin Wu; Shiyi Huang (w/ Dr. Xu Wang), Yujie Wang, Yuxuan Chen (w/ Prof. Tianyu Wo/Xudong Liu)</span></p>
+<p><span class="style11">&bull; [Part Time]  Yao Zhang, Xiaoyu Liu, Tianyou Zeng, Lu Pei, Jiasheng Liu, Zhiqi Zhang </span></p>
 
 <p><span class="style11"><strong>Team Alumni</strong>: <a href="alumni.html" style="text-decoration: none">~$ alumni </a> </span></p>
 
@@ -467,11 +477,13 @@ I had the opportunity to work closely with many institutes around the world and 
 
 <p><span class="Bolder"><!--img src="icons/award-banner.png" width="25" height="25" border="0"/-->Selected Awards</span><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp;</span></p>
 
+<p><span class="style11">&bull;	  <strong>Best Paper Award</strong> of IEEE Joint Cloud Conference (JCC), 2024 </p>
+
 <p><span class="style11">&bull;	  <strong>UK Alan Turing Institute Post-Doctoral Enrichment Award</strong>, 2022 </p>
 
 <p><span class="style11">&bull;   <strong>IEEE Outstanding Service Award</strong>, IEEE JCC-SOSE, 2020 </p>
 
-<p><span class="style11">&bull;   <strong>The Grand Class </strong> of Scientific and Technological Progress Award of Chinese Institute of Electronics, 2017 (2017年度中国电子学会科技进步特等奖) </p>
+<p><span class="style11">&bull;   <strong>The Grand Class of Scientific and Technological Progress Award </strong>  of Chinese Institute of Electronics, 2017 (2017年度中国电子学会科技进步特等奖) </p>
 <p><span class="style11">&bull;   The State Scientific and Technological Progress Award, 1st Prize Nominee, 2018 (2018年度国家科学进步一等奖提名) </p>
 
 <p><span class="style11">&bull;  <strong>Outstanding Graduate Award </strong> of Beijing Graduates, 2017 </p>
@@ -509,7 +521,7 @@ I had the opportunity to work closely with many institutes around the world and 
 </center>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  </span></p>
-<p><span class="style11">Updated by Feb. 2024</span></p>
+<p><span class="style11">Updated by Aug. 2024</span></p>
 <p><span class="style11"><img src="icons/yin.gif" width="50" alt="Renyu" border="0" title="Renyu Yang" />&nbsp;&nbsp;<img src="images/QRcode.png" width="50" alt="QRCode" border="0" title="Beihang Homepage" /></span></p>
 
  
