--- a/publications.html
+++ b/publications.html
@@ -114,7 +114,13 @@ p{ margin:10px auto}
 
 
 
+<p lang="en-US"><span class="blue">2025</span></p>
+
+<p><span class="style11">&bull; M. Zhang, G. Li, C. Guo, R. Yang, S. Wang, H. Bao, X. Li, M. Xu, T. Wo, C. Hu.  SuperFE: A Scalable and Flexible Feature Extractor for ML-based Traffic Analysis Applications. The 20th ACM European Conference on Computer Systems (EuroSys) <a href="paper/eurosys2025.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a></span></p>
+
+
 <p lang="en-US"><span class="blue">2024</span></p>
+
 
 <p><span class="style11">&bull; R. Wang, X. Mou, R. Yang*, K. Gao, P. Liu, C. Liu, T. Wo and X. Liu. CutAddPaste: Time Series Anomaly Detection by Exploiting Abnormal Knowledge. The 30th ACM SIGKDD Conference on Knowledge Discovery and Data Mining (KDD) <a href="paper/kdd2024-cap.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a> </span></p>
 
@@ -144,6 +150,18 @@ p{ margin:10px auto}
 
 <p><span class="style11">&bull; B. Qian, Y. Xuan, D. Wu, Z. Wen, R. Yang, S. He, J. Chen, and R. Ranjan. Edge-Cloud Collaborative Streaming Video Analytics with Multi-agent Deep Reinforcement Learning. IEEE Network 
 <a href="paper/network2024.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>  
+</span></p>	 
+
+<p><span class="style11">&bull; J. Wang, G. Wang, T. Wo, X. Wang and R. Yang*. RESCAPE: A Resource Estimation System for Microservices with Graph Neural Networks and Profile Engine. The 15th IEEE Joint Cloud Conference (JCC) <span class="red">(Best Paper Award)</span>
+<a href="paper/jcc2024-rescape.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>  
+</span></p>	 
+
+<p><span class="style11">&bull; W. Peng, J. Wang, T. Wo and R. Yang*. PrecisionProbe: Non-intrusive Performance Analysis Tool for Deep Learning Recommendation Models. The 15th IEEE Joint Cloud Conference (JCC) 
+<a href="paper/jcc2024-probe.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>  
+</span></p>	 
+
+<p><span class="style11">&bull; Q. Wu, Y. Yang, H. Liu, R. Yang, Y. Liao, P. Zhou.  BotSCL: Heterophily-aware Social Bot Detection with Supervised Contrastive Learning. The 27th International Conference on Pattern Recognition (ICPR)
+<a href="paper/icpr2024.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>  
 </span></p>	 
 
 
