--- a/publications.html
+++ b/publications.html
@@ -116,7 +116,7 @@ p{ margin:10px auto}
 
 <p lang="en-US"><span class="blue">2025</span></p>
 
-<p><span class="style11">&bull; M. Zhang, G. Li, C. Guo, R. Yang, S. Wang, H. Bao, X. Li, M. Xu, T. Wo, C. Hu.  SuperFE: A Scalable and Flexible Feature Extractor for ML-based Traffic Analysis Applications. The 20th ACM European Conference on Computer Systems (EuroSys) <a href="paper/eurosys2025.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a></span></p>
+<p><span class="style11">&bull; M. Zhang, G. Li, C. Guo, R. Yang*, S. Wang, H. Bao, X. Li, M. Xu, T. Wo, C. Hu.  SuperFE: A Scalable and Flexible Feature Extractor for ML-based Traffic Analysis Applications. The 20th ACM European Conference on Computer Systems (EuroSys) <a href="paper/eurosys2025.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a></span></p>
 
 
 <p lang="en-US"><span class="blue">2024</span></p>
