--- a/index.html
+++ b/index.html
@@ -238,13 +238,11 @@ p{ margin:10px auto}
 	VLDB, ICDE, WWW, KDD, EuroSys, SC, ICDCS, DSN, etc. I received the Best Paper Award of IEEE ISADS 2013 and IEEE JCC 2024, and awarded Alan Turing Institute Post-Doctoral 
 	Enrichment Award 2022 and the Grand Class of Scientific and 
 	Technological Progress Award of Chinese Institute of Electronics of year 2017 (the only grand class award since the award is established) 
-	for the key contribution to the reliable resource management at massive scale and its industrial and societal impact.
+	for the key contribution to the reliable resource management at massive scale and its industrial and societal impact. I co-founded the highly successful and internationally leading research consortium COLAB between Leeds, 
+	Alibaba and Beihang University. 
 </span>
 
-<p><span class="style11"> I co-authored/co-led several national and international projects, including UK EPSRC, Innovate UK, 
-	EU Horizon 2020, UK Alan Turing Institute Research Grants, China 973/863/Key R&D Programme, etc., worth more than £8 million over 
-	the last five years. I co-founded the highly successful and internationally leading research consortium COLAB between Leeds, 
-	Alibaba and Beihang University. I am currently acting as an associate editor of ACM Computing Surveys, and on the program committees of many conferences, 
+<p><span class="style11"> I am currently acting as an associate editor of ACM Computing Surveys, and on the program committees of many conferences, 
 	including IJCAI, ECAI, AAAI, CLOUD, etc., I was also the program/area chair of multiple conferences. 
 </span>
 
@@ -363,19 +361,24 @@ I had the opportunity to work closely with many institutes around the world and 
 
 <p><span class="style11"> <strong> Ongoing </strong> </span></p>
 
-<p><span class="style11">&bull; Enabling Generic LLMs on PaddlePaddle and AI Chips (¥6.4M), funded by Beijing S&T Commission and Baidu Inc., Co-I, 2024-2025 </span></p> 
+<p><span class="style11">&bull; Effective Scheduling for Multi-tenant AI Clusters (¥0.3M), funded by National Natural Science Foundation of China, PI, 2025-2027 </span></p> 
 
-<p><span class="style11">&bull; Enhancing Model Training and Inference (¥500K), funded by Company X's Research Programme, PI, 2024 - 2025  </span></p> 
+<p><span class="style11">&bull; Time Series Anomaly Detection for Managing Data and Devices in Production Process at Scale (¥0.3M), funded by Beijing Natural Science Foundation, PI, 2025-2027 </span></p> 
 
-<p><span class="style11">&bull; LLMs-Assisted Information Retrieval Platform (¥200K), funded by CAE, PI, 2024  </span></p> 
+<p><span class="style11">&bull; Enabling Generic LLMs on PaddlePaddle and AI Chips (¥6.4M), funded by Beijing Municipal S&T Commission and Baidu Inc., Co-I, 2024-2025 </span></p> 
 
-<p><span class="style11">&bull; Efficient Resource Scheduling for Intelligent Computing Infrastructures (¥200K), funded by Advanced Multidisciplinary Research Programme, Beihang University, PI, 2024 - 2025  </span></p> 
+<p><span class="style11">&bull; Enhancing Model Training and Inference (¥0.5M), funded by Company X's Research Programme, PI, 2024 - 2025  </span></p> 
+
+<p><span class="style11">&bull; LLMs-Assisted Information Retrieval Platform (¥0.2M), funded by CAE, PI, 2024  </span></p> 
+
+<p><span class="style11">&bull; Efficient Resource Scheduling for Intelligent Computing Infrastructures (¥0.2M), funded by Advanced Multidisciplinary Research Programme, Beihang University, PI, 2024 - 2025  </span></p> 
+
 
 <p><span class="style11">&bull; Cloud Native Technology: Theory and Practice (¥100K), funded by Digital Textbook Funding Programme, Beihang University, PI, 2024 </span></p> 
 
 <p><span class="style11">&bull; Anomaly Management and Decision Making in Massive Custom Manufacturing (¥1.8M), funded by National Key Research and Development Programme, Co-author and Key Member, 2024 - 2026  </span></p> 
 
-<p><span class="style11">&bull; Making Model Training More Reliable (¥400K), funded by Huawei, Co-author and Key Member, 2024 - 2025  </span></p> 
+<p><span class="style11">&bull; Making Model Training More Reliable in Large-Scale AI Clusters (¥0.4M), funded by Huawei, Co-author and Key Member, 2024 - 2025  </span></p> 
 
 
 <p><span class="style11"> <strong> Closed </strong> </span></p>
