--- a/index.html
+++ b/index.html
@@ -199,6 +199,8 @@ p{ margin:10px auto}
 
 <p><span class="style11"> <img src="icons/bell.gif" width="14" height="12" border="0"/> (06/2023) RAIDS Lab is open and we are recruiting young talents! <span class="red">Postdoc/PhD/MSc/undergraduate intern positions are open to apply! </span> Drop me an email if you are interested... </span></p>
 
+<p><span class="style11"> (26/09/2024) Our work on Elastic GPU Scheduling for Online DL Model Training is accepted by ACM SoCC 2024. Big Congrats to Ziyang, Weihan and Tianyu!  </span></p>
+
 <p><span class="style11"> (22/08/2024) Our work on Advanced Feature Engineering for Intelligent Traffic Analysis Applications is accepted by ACM EuroSys 2025. Big Congrats! </span></p>
 
 <p><span class="style11"> (20/07/2024) Our work on GNN-based resource estimation for microservices received the best paper award of IEEE JCC 2024.  Congrats to Jinghao! </span></p>
@@ -259,7 +261,7 @@ p{ margin:10px auto}
 <p><span class="style11">Broadly, I am interested in designing system modules and/or mechanisms for tackling trade-offs in efficiency, performance, reliability and cost for distributed and parallel computing systems at scale such as cloud computing, big data, deep learning training/inference, IoT, etc. My research mainly focuses on: </span></p>
 	<p><span class="style11">&bull; <strong>Enhanced resource efficiency of large-scale computing infrastructures:</strong>
 		QoS-aware resource management [<a href="paper/vldb2014.pdf" style="text-decoration: none">VLDB'14</a>, <a href="paper/icdcs2018.pdf" style="text-decoration: none">ICDCS'18</a>, <a href="paper/socc2019-perphon.pdf" style="text-decoration: none">SoCC'19</a>, <a href="paper/tpds2020-rose.pdf" style="text-decoration: none">TPDS'20a</a>, <a href="paper/ccgrid2021.pdf" style="text-decoration: none">CCGRID'21</a>, <a href="paper/tpds2022-toposcaling.pdf" style="text-decoration: none">TPDS'22a</a>, <a href="paper/tsc2023.pdf" style="text-decoration: none">TSC'23</a>, <a href="paper/eurosys2025.pdf" style="text-decoration: none">EuroSys'25</a>], 
-		DL model training acceleration [<a href="paper/tpds2021-horus.pdf" style="text-decoration: none">TPDS'22b</a>,<a href="paper/sc2022.pdf" style="text-decoration: none">SC'22</a>], 
+		DL model training acceleration [<a href="paper/tpds2021-horus.pdf" style="text-decoration: none">TPDS'22b</a>,<a href="paper/sc2022.pdf" style="text-decoration: none">SC'22</a>,<a href="paper/socc2024-kale.pdf" style="text-decoration: none">SoCC'24</a>], 
 		and multi-objective optimization [<a href="paper/tpds2019-gapar-full.pdf" style="text-decoration: none">TPDS'20b</a>, <a href="paper/jpdc2021-elsevier.pdf" style="text-decoration: none">JPDC'21</a>, <a href="paper/secon2022.pdf" style="text-decoration: none">SECON'22</a>, <a href="paper/jpdc2023.pdf" style="text-decoration: none">JPDC'23</a>], etc.; </span></p>
 	<p><span class="style11">&bull; <strong>Enhanced system dependability:</strong>
 		fault tolerance and failure recovery [<a href="paper/vldb2014.pdf" style="text-decoration: none">VLDB'14</a>,<a href="paper/lisa2014.pdf" style="text-decoration: none">LISA'14</a>,<a href="paper/hase2016.pdf" style="text-decoration: none">HASE'16</a>,<a href="paper/tsc2016.pdf" style="text-decoration: none">TSC'17</a>, <a href="paper/dsn2016.pdf" style="text-decoration: none">DSN'16</a>,<a href="paper/tsc2016b.pdf" style="text-decoration: none">TSC'19</a>],  
@@ -306,7 +308,10 @@ p{ margin:10px auto}
 <div id="div_pub">
 
 <p><span class="Bolder"><!--img src="icons/paper-banner.png" width="25" height="25" border="0"/--> Selected Recent Publications </span></p>
+
 <p><span class="style11">&bull; M. Zhang, G. Li, C. Guo, R. Yang, S. Wang, H. Bao, X. Li, M. Xu, T. Wo, C. Hu.  <a href="paper/eurosys2025.pdf" style="text-decoration: none">SuperFE: A Scalable and Flexible Feature Extractor for ML-based Traffic Analysis Applications</a>. ACM EuroSys 2025 <span class="red">(CCF A)</span></span></p>
+
+<p><span class="style11">&bull; Z. Liu, R. Yang, J. Ouyang, W. Jiang, T. Ye, M. Zhang, S. Huang, J. Huang, C. Song, D. Zhang, T. Wo, C. Hu. <a href="paper/socc2024-kale.pdf" style="text-decoration: none">KALE: Elastic GPU Scheduling for Online DL Model Training</a>. ACM SoCC 2024 <span class="red">(CCF B)</span></span></p>
 
 <p><span class="style11">&bull; R. Wang, X. Mou, R. Yang, K. Gao, P. Liu, C. Liu, T. Wo and X. Liu. <a href="paper/kdd2024-cap.pdf" style="text-decoration: none">CutAddPaste: Time Series Anomaly Detection by Exploiting Abnormal Knowledge</a>. ACM KDD 2024 <span class="red">(CCF A)</span></span></p>
 
