--- a/publications.html
+++ b/publications.html
@@ -121,6 +121,7 @@ p{ margin:10px auto}
 
 <p lang="en-US"><span class="blue">2024</span></p>
 
+<p><span class="style11">&bull; Z. Liu, R. Yang*, J. Ouyang, W. Jiang, T. Ye, M. Zhang, S. Huang, J. Huang, C. Song, D. Zhang, T. Wo, C. Hu. KALE: Elastic GPU Scheduling for Online DL Model Training. The 15th ACM Symposium on Cloud Computing (SoCC) <a href="paper/socc2024-kale.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a> </span></p>
 
 <p><span class="style11">&bull; R. Wang, X. Mou, R. Yang*, K. Gao, P. Liu, C. Liu, T. Wo and X. Liu. CutAddPaste: Time Series Anomaly Detection by Exploiting Abnormal Knowledge. The 30th ACM SIGKDD Conference on Knowledge Discovery and Data Mining (KDD) <a href="paper/kdd2024-cap.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a> </span></p>
 
@@ -163,6 +164,9 @@ p{ margin:10px auto}
 <p><span class="style11">&bull; Q. Wu, Y. Yang, H. Liu, R. Yang, Y. Liao, P. Zhou.  BotSCL: Heterophily-aware Social Bot Detection with Supervised Contrastive Learning. The 27th International Conference on Pattern Recognition (ICPR)
 <a href="paper/icpr2024.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>  
 </span></p>	 
+
+<p><span class="style11">&bull; Y. Li, X. Sun , R. Yang* , X. Sun, S. Chen, S. Wang, A. Bhuiyan, A. Y. Zomaya, J. Xu. GNNRI: detecting anomalous social network users through heterogeneous information networks and user relevance exploration. in the International Journal of Machine Learning and Cybernetics <a href="paper/ijmlc2024.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a> </span></p>
+
 
 
 <p lang="en-US"><span class="blue">2023</span></p>
