--- a/publications_topics.html
+++ b/publications_topics.html
@@ -121,6 +121,9 @@ p{ margin:10px auto}
 <p><span class="style11">&bull; M. Zhang, G. Li, C. Guo, R. Yang*, S. Wang, H. Bao, X. Li, M. Xu, T. Wo, C. Hu.  SuperFE: A Scalable and Flexible Feature Extractor for ML-based Traffic Analysis Applications. in the 20th ACM EuroSys 2025 <a href="paper/eurosys2025.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a></span></p>
 
 
+<p><span class="style11">&bull; Z. Liu, R. Yang*, J. Ouyang, W. Jiang, T. Ye, M. Zhang, S. Huang, J. Huang, C. Song, D. Zhang, T. Wo, C. Hu. KALE: Elastic GPU Scheduling for Online DL Model Training. in the 15th ACM SoCC 2024 <a href="paper/socc2024-kale.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a> </span></p>
+
+
 <p><span class="style11">&bull; R. Yang and J. Xu. Resilient QoS-Aware Workload Co-Scheduling and User Anomaly Detection in Shared Computing Clusters, the UK Alan Turing Institute Workshop on Edge-Cloud Infrastructure for Distributed Intelligent Computing, 2023  
 	<a href="paper/ati2023-poster.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>  
 	</span></p>
@@ -285,6 +288,8 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019
 </span></p>
 
 <p><span class="style11">&bull; P. Townend, S. J. Clement, D. Burdett, R. Yang*, J. Shaw, B. Slater, J. Xu. Improving Data Center Efficiency Through Holistic Scheduling In Kubernetes. in the 13th IEEE SOSE, 2019 <a href="paper/sose2019-k8s.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a> </span></p>
+
+<p><span class="style11">&bull; Y. Li, X. Sun , R. Yang* , X. Sun, S. Chen, S. Wang, A. Bhuiyan, A. Y. Zomaya, J. Xu. GNNRI: detecting anomalous social network users through heterogeneous information networks and user relevance exploration. in the International Journal of Machine Learning and Cybernetics, 2024 <a href="paper/ijmlc2024.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a> </span></p>
 
 
 <p lang="en-US"><span class="blue"> Deep Learning Systems and Applications </span></p>
