--- a/index.html
+++ b/index.html
@@ -222,22 +222,23 @@ p{ margin:10px auto}
 
 <p class="Bolder"><!--img src="icons/bio-banner.png" width="25" height="25" border="0"/--> Short Bio</p> 
 
-<p><span class="style11"> I am an Associate Professor and Co-Director of Reliable, Automated and Intelligent Distributed Systems Lab (RAIDS Lab) at Beihang University, China. Before moving back to Beijing, 
-	I worked in the UK as a lead Research Fellow (2020-2023), funded by UK EPSRC, at the <a href="https://eps.leeds.ac.uk/computing" style="text-decoration: none">School of Computing</a>, 
-	and <a href="https://lida.leeds.ac.uk/" style="text-decoration: none">Leeds Institute for Data Analytics (LIDA)</a>, 
-	University of Leeds and as a research scientist (2018-2020) at Edgetic Ltd., a UK-based high-tech spin-out company 
-	that employs distributed scheduling, machine learning, hardware-software modeling, etc. to reshape the future of 
+<p><span class="style11"> I am an Associate Professor and Co-Director of Reliable, Automated and Intelligent Distributed Systems Lab (RAIDS Lab) at Beihang University, China. 
+	Before moving back to Beijing, I worked in the UK as a lead Research Fellow funded by the UK EPSRC (2020-2023), 
+	with the <a href="https://eps.leeds.ac.uk/computing" style="text-decoration: none">School of Computing</a> 
+	and <a href="https://lida.leeds.ac.uk/" style="text-decoration: none">Leeds Institute for Data Analytics (LIDA)</a>, both at the 
+	University of Leeds, and as a research scientist (2018-2020) at Edgetic Ltd., a UK-based high-tech spin-out company 
+	that employs distributed computing, machine learning, and hardware-software co-designing to reshape the future of 
 	data center efficiency and intelligence. Prior to this, I was a research scientist and lead project manager with the
 	<a href="http://bdbc.buaa.edu.cn" style="text-decoration: none">Beijing Advanced Innovation Center for Big Data and Brain Computing (BDBC)</a>, 
-	Beijing, China. When I was a PhD student, I was also with Alibaba Group (2014-2016), participating in the 
-	development and research on intelligent resource scheduling and performance optimization at Internet scale. 
+	Beijing, China. When I was a PhD student, I was also with Alibaba Group (2014-2016) and engaged in the 
+	development and research on intelligent resource scheduling and performance optimization for computing infrastructures at Internet scale. 
 	My research interests include large-scale dependable distributed systems, trustworthy data-centric engineering, 
 	deep learning systems and applications such as graph representation learning, anomaly detection, etc.
 </span>
 
 <p><span class="style11"> I have published 70+ refereed journal and conference papers (<a href="http://scholar.google.com/citations?user=H_x5laoAAAAJ&hl=en" style="text-decoration: none">Googe Scholar</a> ~2,900 citations, h-index=24, by August 2024), 
 	including top ACM/IEEE Transactions and conference proceedings such as TPDS, TC, TKDE, TNNLS, TSC, TOIS, ACM Computing Surveys (CSUR), 
-	VLDB, ICDE, WWW, KDD, EuroSys, SC, ICDCS, DSN, etc. I received the Best Paper Award of IEEE ISADS 2013 and IEEE JCC 2024, and awarded Alan Turing Institute Post-Doctoral 
+	EuroSys, SC, SoCC, ICDCS, DSN, VLDB, ICDE, WWW, KDD, IJCAI, etc. I received the Best Paper Award of IEEE ISADS 2013 and IEEE JCC 2024, and awarded Alan Turing Institute Post-Doctoral 
 	Enrichment Award 2022 and the Grand Class of Scientific and 
 	Technological Progress Award of Chinese Institute of Electronics of year 2017 (the only grand class award since the award is established) 
 	for the key contribution to the reliable resource management at massive scale and its industrial and societal impact. I co-founded the highly successful and internationally leading research consortium COLAB between Leeds, 
@@ -386,7 +387,7 @@ I had the opportunity to work closely with many institutes around the world and 
 <p><span class="style11">&bull; Making Model Training More Reliable in Large-Scale AI Clusters (¥0.4M), funded by Huawei, Co-author and Key Member, 2024 - 2025  </span></p> 
 
 
-<p><span class="style11"> <strong> Closed </strong> </span></p>
+<p><span class="style11"> <strong> Finished </strong> </span></p>
 
 <p><span class="style11">&bull; Essentials of Modern Cloud Computing (¥400K), funded by Core Curriculum Redefined Programme, National College of Engineering Excellence, Co-I, 2023 - 2024  </span></p> 
 
@@ -439,7 +440,7 @@ I had the opportunity to work closely with many institutes around the world and 
 <p><span class="style11">&bull; [Class 2022] Weihan Jiang, Tianyu Ye, Ziyang Liu, Di Wang (co-supervised w/ Prof. Tianyu Wo/Chunming Hu) </span></p>
 <p><span class="style11">&bull; [Class 2023] Zhida Jiang, Yilong Li, Zeying Wang (co-supervised w/ Prof. Tianyu Wo/Chunming Hu) </span></p>
 <p><span class="style11">&bull; [Class 2024] Zexin Wu; Shiyi Huang (w/ Dr. Xu Wang), Yujie Wang, Yuxuan Chen (w/ Prof. Tianyu Wo/Xudong Liu)</span></p>
-<p><span class="style11">&bull; [Part Time]  Yao Zhang, Xiaoyu Liu, Tianyou Zeng, Lu Pei, Jiasheng Liu, Zhiqi Zhang </span></p>
+<p><span class="style11">&bull; [Part Time]  Yao Zhang, Lu Pei, Xiaoyu Liu, Tianyou Zeng, Zhiqi Zhang, Haiyang Tang </span></p>
 
 <p><span class="style11"><strong>Team Alumni</strong>: <a href="alumni.html" style="text-decoration: none">~$ alumni </a> </span></p>
 
