--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@ p{ margin:10px auto}
 
 <p><span class="style11">&bull; M. Zhang, G. Li, C. Guo, R. Yang, S. Wang, H. Bao, X. Li, M. Xu, T. Wo, C. Hu.  <a href="paper/eurosys2025.pdf" style="text-decoration: none">SuperFE: A Scalable and Flexible Feature Extractor for ML-based Traffic Analysis Applications</a>. ACM EuroSys 2025 <span class="red">(CCF A)</span></span></p>
 
-<p><span class="style11">&bull; Z. Liu, R. Yang, J. Ouyang, W. Jiang, T. Ye, M. Zhang, S. Huang, J. Huang, C. Song, D. Zhang, T. Wo, C. Hu. <a href="paper/socc2024-kale.pdf" style="text-decoration: none">KALE: Elastic GPU Scheduling for Online DL Model Training</a>. ACM SoCC 2024 <span class="red">(CCF B)</span></span></p>
+<p><span class="style11">&bull; Z. Liu, R. Yang, J. Ouyang, W. Jiang, T. Ye, M. Zhang, S. Huang, J. Huang, C. Song, D. Zhang, T. Wo, C. Hu. <a href="paper/socc2024-kale.pdf" style="text-decoration: none">KALE: Elastic GPU Scheduling for Online DL Model Training</a>. ACM SoCC 2024 <span class="red">(CCF B, premier conference on Cloud)</span></span></p>
 
 <p><span class="style11">&bull; R. Wang, X. Mou, R. Yang, K. Gao, P. Liu, C. Liu, T. Wo and X. Liu. <a href="paper/kdd2024-cap.pdf" style="text-decoration: none">CutAddPaste: Time Series Anomaly Detection by Exploiting Abnormal Knowledge</a>. ACM KDD 2024 <span class="red">(CCF A)</span></span></p>
 
@@ -387,7 +387,7 @@ I had the opportunity to work closely with many institutes around the world and 
 <p><span class="style11">&bull; Making Model Training More Reliable in Large-Scale AI Clusters (¥0.4M), funded by Huawei, Co-author and Key Member, 2024 - 2025  </span></p> 
 
 
-<p><span class="style11"> <strong> Finished </strong> </span></p>
+<p><span class="style11"> <strong> Completed </strong> </span></p>
 
 <p><span class="style11">&bull; Essentials of Modern Cloud Computing (¥400K), funded by Core Curriculum Redefined Programme, National College of Engineering Excellence, Co-I, 2023 - 2024  </span></p> 
 
