--- a/publications.html
+++ b/publications.html
@@ -123,6 +123,8 @@ p{ margin:10px auto}
 
 <p><span class="style11">&bull; Z. Liu, R. Yang*, J. Ouyang, W. Jiang, T. Ye, M. Zhang, S. Huang, J. Huang, C. Song, D. Zhang, T. Wo, C. Hu. KALE: Elastic GPU Scheduling for Online DL Model Training. The 15th ACM Symposium on Cloud Computing (SoCC) <a href="paper/socc2024-kale.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a> </span></p>
 
+<p><span class="style11">&bull; Y. Zhao, M. Zhang, T. Wo, R. Yang, C. Hu. BTDefense: A Priority-Aware Adaptive Strategy Against the Block Table Overflow Attack in vLLM. The 30th Symposium on Operating Systems (SOSP), poster <a href="paper/sosp2024-poster.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a> </span></p>
+
 <p><span class="style11">&bull; R. Wang, X. Mou, R. Yang*, K. Gao, P. Liu, C. Liu, T. Wo and X. Liu. CutAddPaste: Time Series Anomaly Detection by Exploiting Abnormal Knowledge. The 30th ACM SIGKDD Conference on Knowledge Discovery and Data Mining (KDD) <a href="paper/kdd2024-cap.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a> </span></p>
 
 <p><span class="style11">&bull; Y. Yang, Q. Wu, B. He, H. Peng, R. Yang, Z. Hao, Y. Liao. SEBot: Structural Entropy Guided Multi-View Contrastive learning for Social Bot Detection. The 30th ACM SIGKDD Conference on Knowledge Discovery and Data Mining (KDD) <a href="paper/kdd2024-sebot.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a> </span></p>
