--- a/publications_topics.html
+++ b/publications_topics.html
@@ -236,6 +236,7 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2020
 
 <p lang="en-US"><span class="blue"> System Dependability </span></p>
 
+<p><span class="style11">&bull; Y. Zhao, M. Zhang, T. Wo, R. Yang, C. Hu. BTDefense: A Priority-Aware Adaptive Strategy Against the Block Table Overflow Attack in vLLM. The 30th Symposium on Operating Systems (SOSP), 2024, poster <a href="paper/sosp2024-poster.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a> </span></p>
 
 <p><span class="style11">&bull; R. Wang, X. Mou, R. Yang*, K. Gao, P. Liu, C. Liu, T. Wo and X. Liu. CutAddPaste: Time Series Anomaly Detection by Exploiting Abnormal Knowledge. The 30th ACM SIGKDD Conference on Knowledge Discovery and Data Mining (KDD), 2024
 <a href="paper/kdd2024-cap.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a> 
