--- a/index.html
+++ b/index.html
@@ -199,6 +199,8 @@ p{ margin:10px auto}
 
 <p><span class="style11"> <img src="icons/bell.gif" width="14" height="12" border="0"/> (06/2023) RAIDS Lab is open and we are recruiting young talents! <span class="red">Postdoc/PhD/MSc/undergraduate intern positions are open to apply! </span> Drop me an email if you are interested... </span></p>
 
+<p><span class="style11"> (26/09/2024) A new approach to defense attacks to LLM serving has been accepted by, and will be presented in the poster session of ACM SOSP 2024.  </span></p>
+
 <p><span class="style11"> (26/09/2024) Our work on Elastic GPU Scheduling for Online DL Model Training is accepted by ACM SoCC 2024. Big Congrats to Ziyang, Weihan and Tianyu!  </span></p>
 
 <p><span class="style11"> (22/08/2024) Our work on Advanced Feature Engineering for Intelligent Traffic Analysis Applications is accepted by ACM EuroSys 2025. Big Congrats! </span></p>
@@ -267,7 +269,7 @@ p{ margin:10px auto}
 	<p><span class="style11">&bull; <strong>Enhanced system dependability:</strong>
 		fault tolerance and failure recovery [<a href="paper/vldb2014.pdf" style="text-decoration: none">VLDB'14</a>,<a href="paper/lisa2014.pdf" style="text-decoration: none">LISA'14</a>,<a href="paper/hase2016.pdf" style="text-decoration: none">HASE'16</a>,<a href="paper/tsc2016.pdf" style="text-decoration: none">TSC'17</a>, <a href="paper/dsn2016.pdf" style="text-decoration: none">DSN'16</a>,<a href="paper/tsc2016b.pdf" style="text-decoration: none">TSC'19</a>],  
 		anomaly detection [<a href="paper/tnnls2021-hawk.pdf" style="text-decoration: none">TNNLS'21</a>, <a href="paper/tkde2021-bissiam.pdf" style="text-decoration: none">TKDE'21</a>, <a href="paper/tweb2022-rosgas.pdf" style="text-decoration: none">TWEB'22</a>, <a href="paper/www2023-fedack.pdf" style="text-decoration: none">WWW'23b</a>, <a href="paper/ijcai2023.pdf" style="text-decoration: none">IJCAI'24</a>, <a href="paper/kdd2024-cap.pdf" style="text-decoration: none">KDD'24b</a>]
-		and dependability modeling [<a href="paper/icde2024.pdf" style="text-decoration: none">ICDE'24</a>], etc.</span></p> 
+		and dependability modeling [<a href="paper/icde2024.pdf" style="text-decoration: none">ICDE'24</a>, <a href="paper/icde2024.pdf" style="text-decoration: none">SOSP'24 poster</a>]</span></p> 
 	<p><span class="style11">&bull; <strong>Enhanced intelligent systems and applications:</strong>  data-centric engineering [<a href="paper/sose2016.pdf" style="text-decoration: none">SOSE'16</a>,<a href="paper/csur2020.pdf" style="text-decoration: none">CSUR'20</a>,<a href="paper/tkde2021.pdf" style="text-decoration: none">TKDE'23</a>], 
 		graph representation learning [<a href="paper/tc2021.pdf" style="text-decoration: none">TC'21</a>,<a href="paper/tois2021-riognn.pdf" style="text-decoration: none">TOIS'21</a>,<a href="paper/www2023-segsl.pdf" style="text-decoration: none">WWW'23a</a>, <a href="paper/kdd2024-sebot.pdf" style="text-decoration: none">KDD'24a</a>], etc. </span></p>
 </div>
@@ -344,7 +346,7 @@ p{ margin:10px auto}
 
 <p><span class="style11">&bull; Z. Wen, T. Lin, R. Yang, S. Ji, R. Ranjan, A. Romanovsky, C. Lin, J. Xu. <a href="paper/tpds2019-gapar-full.pdf" style="text-decoration: none">GA-Par: Dependable Microservice Orchestration Framework for Geo-Distributed Clouds</a>. IEEE TPDS 2019 <span class="red">(CCF A)</span></span></p>
 
-<p><span class="style11">&bull; X. Sun, C. Hu, R. Yang, P. Garraghan, T. Wo, J. Xu, J. Zhu, C. Li.  <a href="paper/icdcs2018.pdf" style="text-decoration: none">ROSE: Cluster Resource Scheduling via Speculative Over-subscription</a> <a href="paper/sosp2017-poster.pdf" style="text-decoration: none">(poster, demo)</a>. IEEE ICDCS 2018 <span class="red">(CCF B/CORE A)</span> ACM SOSP 2017 <span class="red">(CCF A)</span></span></p>
+<p><span class="style11">&bull; X. Sun, C. Hu, R. Yang, P. Garraghan, T. Wo, J. Xu, J. Zhu, C. Li.  <a href="paper/icdcs2018.pdf" style="text-decoration: none">ROSE: Cluster Resource Scheduling via Speculative Over-subscription</a> <a href="paper/sosp2017-poster.pdf" style="text-decoration: none">(poster, demo)</a>. IEEE ICDCS 2018 <span class="red">(CCF B/CORE A)</span> ACM SOSP 2017 poster <span class="red">(CCF A)</span></span></p>
 
 <p><span class="style11">&bull; R. Yang, Y. Zhang, P. Garraghan, Y.Feng, J. Ouyang, J. Xu, Z. Zhang, C. Li. <a href="paper/tsc2016.pdf" style="text-decoration: none">Reliable Cloud Service in Massive-scale Systems through Effective Low-cost Failover.</a> IEEE TSC 2017 <span class="red">(CCF A)</span> </span></p>
 
