--- a/index.html
+++ b/index.html
@@ -200,6 +200,8 @@ p{ margin:10px auto}
 <p><span class="style11"> <img src="icons/bell.gif" width="14" height="12" border="0"/>  <span class="red">(01/12/2024) New 36-month project awarded (PI) by National Key Research and Development Programme. PhD Students and Postdocs post will open soon! </span> Drop me an email if you are interested... </span></p>
 
 <p><span class="style11"> 
+<p><span class="style11"> (10/12/2024) Our work on optimized pareto front of hypernetwork has been accepted by AAAI 2025. Big congrats to Hui!</span></p>
+
 <p><span class="style11"> (20/11/2024) I will serve as Associate Editor of CCF Computer Engineering and Design Journal for the next 4 years! </span></p>
 <p><span class="style11"> (26/09/2024) A new approach to defense attacks to LLM serving has been accepted by, and will be presented in the poster session of ACM SOSP 2024.  </span></p>
 
@@ -242,7 +244,7 @@ p{ margin:10px auto}
 
 <p><span class="style11"> I have published 70+ refereed journal and conference papers (<a href="http://scholar.google.com/citations?user=H_x5laoAAAAJ&hl=en" style="text-decoration: none">Googe Scholar</a> 3,000+ citations, h-index=26, as of Sept. 2024), 
 	including top ACM/IEEE Transactions and conference proceedings such as TPDS, TC, TKDE, TNNLS, TSC, TOIS, ACM Computing Surveys (CSUR), 
-	EuroSys, SC, SoCC, ICDCS, DSN, VLDB, ICDE, WWW, KDD, IJCAI, etc. I received the Best Paper Award of IEEE ISADS 2013 and IEEE JCC 2024, and awarded Alan Turing Institute Post-Doctoral 
+	EuroSys, SC, SoCC, ICDCS, DSN, VLDB, ICDE, WWW, KDD, AAAI, IJCAI etc. I received the Best Paper Award of IEEE ISADS 2013 and IEEE JCC 2024, and awarded Alan Turing Institute Post-Doctoral 
 	Enrichment Award 2022 and the Grand Class of Scientific and 
 	Technological Progress Award of Chinese Institute of Electronics of year 2017 (the only grand class award since the award is established). 
 	I co-founded the highly successful and internationally leading research consortium COLAB between Leeds, 
@@ -267,7 +269,7 @@ p{ margin:10px auto}
 	<p><span class="style11">&bull; <strong>Enhanced resource efficiency of large-scale computing infrastructures:</strong>
 		QoS-aware resource management [<a href="paper/vldb2014.pdf" style="text-decoration: none">VLDB'14</a>, <a href="paper/icdcs2018.pdf" style="text-decoration: none">ICDCS'18</a>, <a href="paper/socc2019-perphon.pdf" style="text-decoration: none">SoCC'19</a>, <a href="paper/tpds2020-rose.pdf" style="text-decoration: none">TPDS'20a</a>, <a href="paper/ccgrid2021.pdf" style="text-decoration: none">CCGRID'21</a>, <a href="paper/tpds2022-toposcaling.pdf" style="text-decoration: none">TPDS'22a</a>, <a href="paper/tsc2023.pdf" style="text-decoration: none">TSC'23</a>, <a href="paper/eurosys2025.pdf" style="text-decoration: none">EuroSys'25</a>], 
 		DL model training acceleration [<a href="paper/tpds2021-horus.pdf" style="text-decoration: none">TPDS'22b</a>,<a href="paper/sc2022.pdf" style="text-decoration: none">SC'22</a>,<a href="paper/socc2024-kale.pdf" style="text-decoration: none">SoCC'24</a>], 
-		and multi-objective optimization [<a href="paper/tpds2019-gapar-full.pdf" style="text-decoration: none">TPDS'20b</a>, <a href="paper/jpdc2021-elsevier.pdf" style="text-decoration: none">JPDC'21</a>, <a href="paper/secon2022.pdf" style="text-decoration: none">SECON'22</a>, <a href="paper/jpdc2023.pdf" style="text-decoration: none">JPDC'23</a>], etc.; </span></p>
+		and multi-objective optimization [<a href="paper/aaai2025.pdf" style="text-decoration: none">AAAI'25</a>,<a href="paper/tpds2019-gapar-full.pdf" style="text-decoration: none">TPDS'20b</a>, <a href="paper/jpdc2021-elsevier.pdf" style="text-decoration: none">JPDC'21</a>, <a href="paper/secon2022.pdf" style="text-decoration: none">SECON'22</a>, <a href="paper/jpdc2023.pdf" style="text-decoration: none">JPDC'23</a>], etc.; </span></p>
 	<p><span class="style11">&bull; <strong>Enhanced system dependability:</strong>
 		fault tolerance and failure recovery [<a href="paper/vldb2014.pdf" style="text-decoration: none">VLDB'14</a>,<a href="paper/lisa2014.pdf" style="text-decoration: none">LISA'14</a>,<a href="paper/hase2016.pdf" style="text-decoration: none">HASE'16</a>,<a href="paper/tsc2016.pdf" style="text-decoration: none">TSC'17</a>, <a href="paper/dsn2016.pdf" style="text-decoration: none">DSN'16</a>,<a href="paper/tsc2016b.pdf" style="text-decoration: none">TSC'19</a>],  
 		anomaly detection [<a href="paper/tnnls2021-hawk.pdf" style="text-decoration: none">TNNLS'21</a>, <a href="paper/tkde2021-bissiam.pdf" style="text-decoration: none">TKDE'21</a>, <a href="paper/tweb2022-rosgas.pdf" style="text-decoration: none">TWEB'22</a>, <a href="paper/www2023-fedack.pdf" style="text-decoration: none">WWW'23b</a>, <a href="paper/ijcai2023.pdf" style="text-decoration: none">IJCAI'24</a>, <a href="paper/kdd2024-cap.pdf" style="text-decoration: none">KDD'24b</a>]
@@ -315,6 +317,8 @@ p{ margin:10px auto}
 <p><span class="Bolder"><!--img src="icons/paper-banner.png" width="25" height="25" border="0"/--> Selected Recent Publications </span></p>
 
 <p><span class="style11">&bull; M. Zhang, G. Li, C. Guo, R. Yang, S. Wang, H. Bao, X. Li, M. Xu, T. Wo, C. Hu.  <a href="paper/eurosys2025.pdf" style="text-decoration: none">SuperFE: A Scalable and Flexible Feature Extractor for ML-based Traffic Analysis Applications</a>. ACM EuroSys 2025 <span class="red">(CCF A)</span></span></p>
+
+<p><span class="style11">&bull; H. Wang, R. Yang, J. Sun, H. Peng, X. Mou, T. Wo and X. Liu. <a href="paper/aaai2025.pdf" style="text-decoration: none">IOP: An Idempotent-Like Optimization Method on the Pareto Front of Hypernetwork</a>. AAAI 2025 <span class="red">(CCF A)</span></span></p>
 
 <p><span class="style11">&bull; Z. Liu, R. Yang, J. Ouyang, W. Jiang, T. Ye, M. Zhang, S. Huang, J. Huang, C. Song, D. Zhang, T. Wo, C. Hu. <a href="paper/socc2024-kale.pdf" style="text-decoration: none">KALE: Elastic GPU Scheduling for Online DL Model Training</a>. ACM SoCC 2024 <span class="red">(CCF B, premier conference on Cloud)</span></span></p>
 
@@ -439,11 +443,11 @@ I had the opportunity to work closely with many institutes around the world and 
 <p><span class="style11">&bull; Junhong Liu (2024.9- , BeihangU) </span></p> 
 <p><span class="style11">&bull; Huaqiang Qiu (2024.9- , BeihangU) </span></p> 
 <p><span class="style11">&bull; Rui Wang (2023.9- , BeihangU, w/ Prof. Xudong Liu): KDD'24, FCS'24, ICASSP'23, SDM'23  </span></p> 
-<p><span class="style11">&bull; Hui Wang (2023.9- , BeihangU, w/ Prof. Xudong Liu) </span></p>
+<p><span class="style11">&bull; Hui Wang (2023.9- , BeihangU, w/ Prof. Xudong Liu): AAAI'25, ICME'24, ICASSP'23 </span></p>
 <p><span class="style11">&bull; Yihui Zhang (2023.9- , BeihangU, w/ Prof. Tianyu Wo) </span></p>
 <p><span class="style11">&bull; Jinghao Wang (2023.5- , BeihangU, w/ Prof. Chunming Hu and Dr. Xu Wang): JCC'24 Best Paper </span></p> 
 <p><span class="style11">&bull; Yang Zhang (2023.9- , BeihangU, w/ Prof. Chunming Hu) </span></p> 
-<p><span class="style11">&bull; Yingguang Yang (2021.7-, USTC, w/ Prof. Yong Liao and Dr. Pengyuan Zhou): TWEB'23, WWW'23, arXiv'23, IJCAI'24, KDD'24 </span></p>
+<p><span class="style11">&bull; Yingguang Yang (2021.7-, USTC, w/ Prof. Yong Liao and Dr. Pengyuan Zhou): IJCAI'24, KDD'24, TWEB'23, WWW'23 </span></p>
 </div>
 
 <p><span class="style11"><strong>MSc Students</strong> </span></p>
