--- a/publications_topics.html
+++ b/publications_topics.html
@@ -295,6 +295,8 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019
 
 <p lang="en-US"><span class="blue"> Deep Learning Systems and Applications </span></p>
 
+<p><span class="style11">&bull; H. Wang, R. Yang*, J. Sun, H. Peng, X. Mou, T. Wo and X. Liu. IOP: An Idempotent-Like Optimization Method on the Pareto Front of Hypernetwork. The 39th AAAI Conference on Artificial Intelligence (AAAI), 2025 <a href="paper/aaai2025.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a></span></p>
+
 <p><span class="style11">&bull; Y. Yang, Q. Wu, B. He, H. Peng, R. Yang, Z. Hao, Y. Liao. SEBot: Structural Entropy Guided Multi-View Contrastive learning for Social Bot Detection. The 30th ACM SIGKDD Conference on Knowledge Discovery and Data Mining (KDD), 2024 <a href="paper/kdd2024-sebot.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a> </span></p>
 
 <p><span class="style11">&bull; B. Qian, Y. Xuan, D. Wu, Z. Wen, R. Yang, S. He, J. Chen, and R. Ranjan. Edge-Cloud Collaborative Streaming Video Analytics with Multi-agent Deep Reinforcement Learning. IEEE Network. 2024 
