--- a/publications.html
+++ b/publications.html
@@ -118,7 +118,12 @@ p{ margin:10px auto}
 
 <p><span class="style11">&bull; M. Zhang, G. Li, C. Guo, R. Yang*, S. Wang, H. Bao, X. Li, M. Xu, T. Wo, C. Hu.  SuperFE: A Scalable and Flexible Feature Extractor for ML-based Traffic Analysis Applications. The 20th ACM European Conference on Computer Systems (EuroSys) <a href="paper/eurosys2025.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a></span></p>
 
-<p><span class="style11">&bull; H. Wang, R. Yang*, J. Sun, H. Peng, X. Mou, T. Wo and X. Liu. IOP: An Idempotent-Like Optimization Method on the Pareto Front of Hypernetwork. The 39th AAAI Conference on Artificial Intelligence (AAAI) <a href="paper/aaai2025.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a></span></p>
+<p><span class="style11">&bull; H. Wang, R. Yang*, J. Sun, H. Peng, X. Mou, T. Wo and X. Liu. IOP: An Idempotent-Like Optimization Method on the Pareto Front of Hypernetwork. The 39th AAAI Conference on Artificial Intelligence (AAAI) (oral) <a href="paper/aaai2025.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a></span></p>
+
+<p><span class="style11">&bull; Z. Zou, M. Zhang, G. Li, R. Yang, T. Wo, C. Hu, M. Xu. Recent Advances in Programmable Switches Driven Network Security. Journal of Software (In Chinese) <a href="paper/jos2025.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a></span></p>
+
+<p><span class="style11">&bull; C. Luo, T. Chen, R. Yang*, W. Wu, C. Hu. GenSC: A Novel and General Local Search Framework for Set Covering Problem. Frontiers of Computer Science <a href="paper/fcs2025.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a></span></p>
+
 
 <p lang="en-US"><span class="blue">2024</span></p>
 
