--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ p{ margin:10px auto}
 <p class="Bolder"><!--img src="icons/bio-banner.png" width="25" height="25" border="0"/--> Short Bio</p> 
 
 <p><span class="style11"> I am an Associate Professor and Co-Director of Reliable, Automated and Intelligent Distributed Systems Lab (RAIDS Lab) at Beihang University, China. 
-	Before moving back to Beijing, I worked in the UK as a lead Research Fellow funded by the UK EPSRC (2020-2023), 
+	Before moving back to Beijing, I was based in the UK as a lead Research Fellow funded by the UK EPSRC (2020-2023), 
 	with the <a href="https://eps.leeds.ac.uk/computing" style="text-decoration: none">School of Computing</a> 
 	and <a href="https://lida.leeds.ac.uk/" style="text-decoration: none">Leeds Institute for Data Analytics (LIDA)</a>, both at the 
 	University of Leeds, and as a research scientist (2018-2020) at Edgetic Ltd., a UK-based high-tech spin-out company 
@@ -244,7 +244,7 @@ p{ margin:10px auto}
 
 <p><span class="style11"> I have published 70+ refereed journal and conference papers (<a href="http://scholar.google.com/citations?user=H_x5laoAAAAJ&hl=en" style="text-decoration: none">Googe Scholar</a> 3,000+ citations, h-index=26, as of Sept. 2024), 
 	including top ACM/IEEE Transactions and conference proceedings such as TPDS, TC, TKDE, TNNLS, TSC, TOIS, ACM Computing Surveys (CSUR), 
-	EuroSys, SC, SoCC, ICDCS, DSN, VLDB, ICDE, WWW, KDD, AAAI, IJCAI etc. I received the Best Paper Award of IEEE ISADS 2013 and IEEE JCC 2024, and awarded Alan Turing Institute Post-Doctoral 
+	EuroSys, SC, SoCC, ICDCS, DSN, VLDB, ICDE, WWW, KDD, AAAI, IJCAI, etc. I received the Best Paper Award of IEEE ISADS 2013 and IEEE JCC 2024, and awarded Alan Turing Institute Post-Doctoral 
 	Enrichment Award 2022 and the Grand Class of Scientific and 
 	Technological Progress Award of Chinese Institute of Electronics of year 2017 (the only grand class award since the award is established). 
 	I co-founded the highly successful and internationally leading research consortium COLAB between Leeds, 
@@ -269,7 +269,7 @@ p{ margin:10px auto}
 	<p><span class="style11">&bull; <strong>Enhanced resource efficiency of large-scale computing infrastructures:</strong>
 		QoS-aware resource management [<a href="paper/vldb2014.pdf" style="text-decoration: none">VLDB'14</a>, <a href="paper/icdcs2018.pdf" style="text-decoration: none">ICDCS'18</a>, <a href="paper/socc2019-perphon.pdf" style="text-decoration: none">SoCC'19</a>, <a href="paper/tpds2020-rose.pdf" style="text-decoration: none">TPDS'20a</a>, <a href="paper/ccgrid2021.pdf" style="text-decoration: none">CCGRID'21</a>, <a href="paper/tpds2022-toposcaling.pdf" style="text-decoration: none">TPDS'22a</a>, <a href="paper/tsc2023.pdf" style="text-decoration: none">TSC'23</a>, <a href="paper/eurosys2025.pdf" style="text-decoration: none">EuroSys'25</a>], 
 		DL model training acceleration [<a href="paper/tpds2021-horus.pdf" style="text-decoration: none">TPDS'22b</a>,<a href="paper/sc2022.pdf" style="text-decoration: none">SC'22</a>,<a href="paper/socc2024-kale.pdf" style="text-decoration: none">SoCC'24</a>], 
-		and multi-objective optimization [<a href="paper/aaai2025.pdf" style="text-decoration: none">AAAI'25</a>,<a href="paper/tpds2019-gapar-full.pdf" style="text-decoration: none">TPDS'20b</a>, <a href="paper/jpdc2021-elsevier.pdf" style="text-decoration: none">JPDC'21</a>, <a href="paper/secon2022.pdf" style="text-decoration: none">SECON'22</a>, <a href="paper/jpdc2023.pdf" style="text-decoration: none">JPDC'23</a>], etc.; </span></p>
+		and multi-objective optimization [<a href="paper/aaai2025.pdf" style="text-decoration: none">AAAI'25</a>, <a href="paper/fcs2025.pdf" style="text-decoration: none">FCS'25</a>, <a href="paper/tpds2019-gapar-full.pdf" style="text-decoration: none">TPDS'20b</a>, <a href="paper/jpdc2021-elsevier.pdf" style="text-decoration: none">JPDC'21</a>, <a href="paper/secon2022.pdf" style="text-decoration: none">SECON'22</a>, <a href="paper/jpdc2023.pdf" style="text-decoration: none">JPDC'23</a>], etc.; </span></p>
 	<p><span class="style11">&bull; <strong>Enhanced system dependability:</strong>
 		fault tolerance and failure recovery [<a href="paper/vldb2014.pdf" style="text-decoration: none">VLDB'14</a>,<a href="paper/lisa2014.pdf" style="text-decoration: none">LISA'14</a>,<a href="paper/hase2016.pdf" style="text-decoration: none">HASE'16</a>,<a href="paper/tsc2016.pdf" style="text-decoration: none">TSC'17</a>, <a href="paper/dsn2016.pdf" style="text-decoration: none">DSN'16</a>,<a href="paper/tsc2016b.pdf" style="text-decoration: none">TSC'19</a>],  
 		anomaly detection [<a href="paper/tnnls2021-hawk.pdf" style="text-decoration: none">TNNLS'21</a>, <a href="paper/tkde2021-bissiam.pdf" style="text-decoration: none">TKDE'21</a>, <a href="paper/tweb2022-rosgas.pdf" style="text-decoration: none">TWEB'22</a>, <a href="paper/www2023-fedack.pdf" style="text-decoration: none">WWW'23b</a>, <a href="paper/ijcai2023.pdf" style="text-decoration: none">IJCAI'24</a>, <a href="paper/kdd2024-cap.pdf" style="text-decoration: none">KDD'24b</a>]
