--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@ I had the opportunity to work closely with many institutes around the world and 
 
 <p><span class="style11">&bull; Towards Building, Assessing and Evolving Cloud Native Applications (¥5M), funded by National Key Research and Development Programme (2024YFB4505901), PI, 2025-2027 </span></p> 
 
-<p><span class="style11">&bull; Heterogeneity-aware Scheduling for Deep Recommendation Models  (¥500K), funded by Huawei Research Fund, PI, 2025-2026 </span></p> 
+<p><span class="style11">&bull; Heterogeneity-aware Scheduling for Generative Recommendation Models (¥1.5M), funded by Huawei Research Fund, PI, 2025-2027 </span></p> 
 
 <p><span class="style11">&bull; Effective Scheduling for Multi-tenant AI Clusters (¥300K), funded by National Natural Science Foundation of China, PI, 2025-2027 </span></p> 
 
