--- a/alumni.html
+++ b/alumni.html
@@ -104,7 +104,7 @@ I have been co-advising and/or working closely with many students/PDRAs mainly f
 
 
 <p><span class="style11"><strong> Former PhD Students/Postdocs </strong></span></p>
-
+<p><span class="style11">&bull; Yingguang Yang (2021.7-2024.12, USTC, w/ Prof. Yong Liao and Dr. Pengyuan Zhou): IJCAI'24, KDD'24, TWEB'23, WWW'23 </span></p>
 <p><span class="style11">&bull; Dr. Satish Kumar, Dr. Zeinab Nezami, Dr. Clement Mommessin (Postdoc, 2021.1-2023.4, UoLeeds) </span></p>
 <p><span class="style11">&bull; Dr. Qi Shen (Postdoc, 2017.9-2019.8, BeihangU): JPDC'20 </span></p>
 <p><span class="style11">&bull; <a href="https://xshaun.github.io/" style="text-decoration: none">Xiaoyang Sun</a> (PhD., 2019.9-2023.12, UoLeeds, with Prof. Jie Xu and Prof. Zheng Wang, first employment PDRA at UoLeeds): SOSP'17 poster, ICDCS'18'22, PLDI'21, SC'22, TPDS'20'22, JPDC'23</span></p>
