--- a/publications_topics.html
+++ b/publications_topics.html
@@ -295,7 +295,7 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019
 <p><span class="style11">&bull; Y. Li, X. Sun , R. Yang* , X. Sun, S. Chen, S. Wang, A. Bhuiyan, A. Y. Zomaya, J. Xu. GNNRI: detecting anomalous social network users through heterogeneous information networks and user relevance exploration. in the International Journal of Machine Learning and Cybernetics, 2024 <a href="paper/ijmlc2024.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a> </span></p>
 
 
-<p lang="en-US"><span class="blue"> Deep Learning Systems and Applications </span></p>
+<p lang="en-US"><span class="blue"> AI Algorithms and Applications </span></p>
 
 <p><span class="style11">&bull; C. Luo, T. Chen, R. Yang*, W. Wu, C. Hu. GenSC: A Novel and General Local Search Framework for Set Covering Problem. Frontiers of Computer Science (FCS), 2025 <a href="paper/fcs2025.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a></span></p>
 
