--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ p{ margin:10px auto}
 
 <p><span class="style11"> <img src="icons/bell.gif" width="14" height="12" border="0"/> <span class="red">[Call for Papers]</span> <a href="call4papers/Electronics-SI.pdf" style="text-decoration: none">"Machine Intelligent Information and Efficient Systems"</a> Special Issue in the journal of Electronics (SCI-indexed, IF=2.690), deadline extended to <span class="red">14 October 2024</span> </span></p>
 
-<p><span class="style11"> <img src="icons/bell.gif" width="14" height="12" border="0"/>  <span class="red">(01/12/2024) New 36-month project awarded (PI) by National Key Research and Development Programme. PhD Students and Postdocs post will open soon! </span> Drop me an email if you are interested... </span></p>
+<p><span class="style11"> <img src="icons/bell.gif" width="14" height="12" border="0"/>  <span class="red">(01/12/2024) Two new 36-month projects awarded (PI) by National Key Research and Development Programme and National Youth Fellowship. A few PhD Student and Postdoc positions will open soon! </span> Drop me emails if you are interested... </span></p>
 
 <p><span class="style11"> 
 <p><span class="style11"> (10/12/2024) Our work on optimized pareto front of hypernetwork has been accepted by AAAI 2025. Big congrats to Hui!</span></p>
@@ -209,15 +209,6 @@ p{ margin:10px auto}
 
 <p><span class="style11"> (22/08/2024) Our work on Advanced Feature Engineering for Intelligent Traffic Analysis Applications is accepted by ACM EuroSys 2025. Big Congrats! </span></p>
 
-<p><span class="style11"> (20/07/2024) Our work on GNN-based resource estimation for microservices received the best paper award of IEEE JCC 2024.  Congrats to Jinghao! </span></p>
-
-<p><span class="style11"> (17/05/2024) Two papers are accepted by ACM KDD 2024. Big congrats to Rui, Xudong and Yingguang! </span></p>
-
-<p><span class="style11"> (16/04/2024) Our work on Dynamic Graph Transformers for Bot Detection is accepted by IJCAI 2024. </span></p>
-
-<p><span class="style11"> (08/12/2023) Our work on Recovering from Poisoning Attacks is accepted by ICDE 2024. </span></p>
-
-<p><span class="style11"> (29/08/2023) Our work on IoT streaming management is accepted by IEEE Trans. on Services Computing. </span></p>
 
 <p><span class="style11">~$ No news is good news...Check <a href="news.html">older events</a>. </span></p>
 </div>
@@ -242,7 +233,7 @@ p{ margin:10px auto}
 	deep learning systems and applications such as graph representation learning, anomaly detection, etc.
 </span>
 
-<p><span class="style11"> I have published 70+ refereed journal and conference papers (<a href="http://scholar.google.com/citations?user=H_x5laoAAAAJ&hl=en" style="text-decoration: none">Googe Scholar</a> 3,000+ citations, h-index=26, as of Sept. 2024), 
+<p><span class="style11"> I have published 70+ refereed journal and conference papers (<a href="http://scholar.google.com/citations?user=H_x5laoAAAAJ&hl=en" style="text-decoration: none">Googe Scholar</a> 3,300+ citations, h-index=27, as of Jan. 2025), 
 	including top ACM/IEEE Transactions and conference proceedings such as TPDS, TC, TKDE, TNNLS, TSC, TOIS, ACM Computing Surveys (CSUR), 
 	EuroSys, SC, SoCC, ICDCS, DSN, VLDB, ICDE, WWW, KDD, AAAI, IJCAI, etc. I received the Best Paper Award of IEEE ISADS 2013 and IEEE JCC 2024, and awarded Alan Turing Institute Post-Doctoral 
 	Enrichment Award 2022 and the Grand Class of Scientific and 
@@ -383,13 +374,13 @@ I had the opportunity to work closely with many institutes around the world and 
 
 <p><span class="style11">&bull; Time Series Anomaly Detection for Managing Data and Devices in Production Process at Scale (¥300K), funded by Beijing Natural Science Foundation, PI, 2025-2027 </span></p> 
 
-<p><span class="style11">&bull; Enabling Generic LLMs on PaddlePaddle and AI Chips (¥6.4M), funded by Beijing Municipal S&T Commission and Baidu Inc., Co-I, 2024-2025 </span></p> 
-
 <p><span class="style11">&bull; Enhancing Model Training and Inference (¥500K), funded by Kuaishou Research Funding, PI, 2024 - 2025  </span></p> 
 
 <p><span class="style11">&bull; Efficient Resource Scheduling for Intelligent Computing Infrastructures (¥200K), funded by Advanced Multidisciplinary Research Programme, Beihang University, PI, 2024 - 2025  </span></p> 
 
 <p><span class="style11">&bull; Multi-Modal Learning for Device Defect Detection in Extreme Conditions (¥200K), funded by University Research Programme, Beihang University, PI, 2024 - 2025  </span></p> 
+
+<p><span class="style11">&bull; Enabling Generic LLMs on PaddlePaddle and AI Chips (¥6.4M), funded by Beijing Municipal S&T Commission and Baidu Inc., Co-I, 2024-2025 </span></p> 
 
 <p><span class="style11">&bull; Anomaly Management and Decision Making in Massive Custom Manufacturing (¥1.8M), funded by National Key Research and Development Programme, Co-author and Key Member, 2024 - 2026  </span></p> 
 
@@ -402,7 +393,7 @@ I had the opportunity to work closely with many institutes around the world and 
 
 <p><span class="style11">&bull; LLMs-Assisted Information Retrieval Platform (¥200K), funded by CAE, PI, 2024  </span></p> 
 
-<p><span class="style11">&bull; Essentials of Modern Cloud Computing (¥400K), funded by Core Curriculum Redefined Programme, National College of Engineering Excellence, Co-I, 2023 - 2024  </span></p> 
+<p><span class="style11">&bull; Essentials of Modern Cloud Computing (¥400K), funded by Core Curriculum Redefined Programme, National College of Elite Engineering, Co-I, 2023 - 2024  </span></p> 
 
 <p><span class="style11">&bull; Algorithmic Scheduling Support for Efficient AI Model Training (¥300K), funded by Kuaishou Research Funding, Co-PI, 2023 - 2024  </span></p> 
 
@@ -441,13 +432,12 @@ I had the opportunity to work closely with many institutes around the world and 
 <p><span class="style11"><strong>PhD Students</strong> </span></p>
 <p><span class="style11">&bull; Yuzheng Zhang (2025.9- , BeihangU) </span></p> 
 <p><span class="style11">&bull; Junhong Liu (2024.9- , BeihangU) </span></p> 
-<p><span class="style11">&bull; Huaqiang Qiu (2024.9- , BeihangU) </span></p> 
+<p><span class="style11">&bull; Huaqiang Qiu (2024.9- , BeihangU, National College of Elite Engineering) </span></p> 
 <p><span class="style11">&bull; Rui Wang (2023.9- , BeihangU, w/ Prof. Xudong Liu): KDD'24, FCS'24, ICASSP'23, SDM'23  </span></p> 
 <p><span class="style11">&bull; Hui Wang (2023.9- , BeihangU, w/ Prof. Xudong Liu): AAAI'25, ICME'24, ICASSP'23 </span></p>
 <p><span class="style11">&bull; Yihui Zhang (2023.9- , BeihangU, w/ Prof. Tianyu Wo) </span></p>
 <p><span class="style11">&bull; Jinghao Wang (2023.5- , BeihangU, w/ Prof. Chunming Hu and Dr. Xu Wang): JCC'24 Best Paper </span></p> 
 <p><span class="style11">&bull; Yang Zhang (2023.9- , BeihangU, w/ Prof. Chunming Hu) </span></p> 
-<p><span class="style11">&bull; Yingguang Yang (2021.7-, USTC, w/ Prof. Yong Liao and Dr. Pengyuan Zhou): IJCAI'24, KDD'24, TWEB'23, WWW'23 </span></p>
 </div>
 
 <p><span class="style11"><strong>MSc Students</strong> </span></p>
@@ -455,7 +445,7 @@ I had the opportunity to work closely with many institutes around the world and 
 <p><span class="style11">&bull; [Class 2023] Zhida Jiang, Yilong Li, Zeying Wang (co-supervised w/ Prof. Tianyu Wo/Chunming Hu) </span></p>
 <p><span class="style11">&bull; [Class 2024] Zexin Wu; Shiyi Huang (w/ Dr. Xu Wang), Yujie Wang, Yuxuan Chen (w/ Prof. Tianyu Wo/Xudong Liu)</span></p>
 <p><span class="style11">&bull; [Class 2025] Yitang Yang</span></p>
-<p><span class="style11">&bull; [Part Time]  Yao Zhang, Lu Pei, Xiaoyu Liu, Tianyou Zeng, Zhiqi Zhang, Haiyang Tang </span></p>
+<p><span class="style11">&bull; [Part Time] Yao Zhang, Lu Pei, Xiaoyu Liu, Tianyou Zeng, Zhiqi Zhang, Haiyang Tang </span></p>
 
 <p><span class="style11"><strong>Team Alumni</strong>: <a href="alumni.html" style="text-decoration: none">~$ alumni </a> </span></p>
 
@@ -468,9 +458,9 @@ I had the opportunity to work closely with many institutes around the world and 
 <!--p><span class="style11">&bull; <img src="icons/news.gif" width="25" height="12" border="0"/> Essentials of Modern Cloud Computing (Graduate Level, National College of Engineering Excellence, with Prof. Chunming Hu and co), [Spring 2024] </span></p-->
  
 
-<p><span class="style11">&bull; Essentials of Modern Cloud Computing (Graduate Level, National College of Engineering Excellence, with Prof. Chunming Hu and co), Spring 2024 </span></p>
-<p><span class="style11">&bull; Foudations of Cloud Computing (Undergraduate Level, BeihangU), Spring 2024 </span></p>
-<p><span class="style11">&bull; Foudations of Software Engineering (Undergraduate Level, BeihangU), Spring 2024 </span></p>
+<p><span class="style11">&bull; Essentials of Modern Cloud Computing (Graduate Level, National College of Elite Engineering, with Prof. Chunming Hu and co), Spring 2024/2025 </span></p>
+<p><span class="style11">&bull; Foudations of Cloud Computing (Undergraduate Level, BeihangU), Spring 2024/2025 </span></p>
+<p><span class="style11">&bull; Foudations of Software Engineering (Undergraduate Level, BeihangU), Spring 2024/2025 </span></p>
 <p><span class="style11">&bull; Research Methodology and Training (Undergraduate Level, BeihangU), Autumn 2023/2024 </span></p>
 <p><span class="style11">&bull; Services Computing (Graduate Level, BeihangU), <a href="http://www.xuwang.tech/course/sc2023fall/main.html">Autumn 2023</a>, Autumn 2024</span></p> 
 <p><span class="style11">&bull; Operating Systems (XJCO2211, Undergraduate Level, UoLeeds, with Prof. Jie Xu), Autumn 2020-2022 </span></p> 
