--- a/news.html
+++ b/news.html
@@ -76,6 +76,16 @@ p{ margin:10px auto}
 <body>
 <p><span class="Bolder">Events</span></p>
 
+<p><span class="style11"> (20/07/2024) Our work on GNN-based resource estimation for microservices received the best paper award of IEEE JCC 2024.  Congrats to Jinghao! </span></p>
+
+<p><span class="style11"> (17/05/2024) Two papers are accepted by ACM KDD 2024. Big congrats to Rui, Xudong and Yingguang! </span></p>
+
+<p><span class="style11"> (16/04/2024) Our work on Dynamic Graph Transformers for Bot Detection is accepted by IJCAI 2024. </span></p>
+
+<p><span class="style11"> (08/12/2023) Our work on Recovering from Poisoning Attacks is accepted by ICDE 2024. </span></p>
+
+<p><span class="style11"> (29/08/2023) Our work on IoT streaming management is accepted by IEEE Trans. on Services Computing. </span></p>
+
 <p><span class="style11"> (20/04/2023) I presented a poster on <a href="paper/ati2023-poster.pdf">Resilient QoS-Aware Workload Co-Scheduling and User Anomaly Detection in Shared Computing Clusters</a> in the UK Alan Turing Workshop on Edge-Cloud Infrastructure for Distributed Intelligent Computing.</span></p>
 
 <p><span class="style11"> (01/03/2023) I will be joining Beihang University as Associate Professor in Summer 2023. I'm actively looking for strong and motivated students and welcome applicants from diverse backgrounds. </span></p>
