--- a/index.html
+++ b/index.html
@@ -481,9 +481,9 @@ I had the opportunity to work closely with many institutes around the world and 
 
 <p><span class="style11">&bull; Program Chair: IEEE International Conference on Joint Cloud Computing (JCC), 2025, 2020, 2019 </span></p>
 
-<p><span class="style11">&bull; Area/Track Chair: IEEE International Conference on Cloud Computing (CLOUD) 2021. </span></p>
+<p><span class="style11">&bull; Area/Track Chair: International Conference on Big Data Computing and Communications (BigCom) 2025, IEEE International Conference on Cloud Computing (CLOUD) 2021. </span></p>
 
-<p><span class="style11">&bull; PC Member: IJCAI, ECAI, AAAI, CLOUD, UCC, BDCAT, HPCC, etc. </span></p>
+<p><span class="style11">&bull; PC Member: IJCAI, ECAI, AAAI, CLOUD, UCC, HPCC, etc. </span></p>
 
 <p><span class="style11">&bull; Journal Reviewers: TPDS, TDSC, TC, TKDE, TSC, TSE, TCC, TKDD, CSUR, etc. </span></p> 
 
@@ -536,7 +536,7 @@ I had the opportunity to work closely with many institutes around the world and 
 </center>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  </span></p>
-<p><span class="style11">Updated by Nov. 2024</span></p>
+<p><span class="style11">Updated by Jan. 2025</span></p>
 <p><span class="style11"><img src="icons/yin.gif" width="50" alt="Renyu" border="0" title="Renyu Yang" />&nbsp;&nbsp;<img src="images/QRcode.png" width="50" alt="QRCode" border="0" title="Beihang Homepage" /></span></p>
 
  
