--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@ p{ margin:10px auto}
 <p><span class="Bolder"><!--img src="icons/grant-banner.png" width="25" height="25" border="0"/--> Selected Research Grants</span></p>
 
 <p><span class="style11">  
-I had the opportunity to work closely with many institutes around the world and engaged in many government/industry funded research projects to solve real-world problems with innovative cloud and analytic technologies.</span></p>
+I had the opportunity to work closely with many institutes around the world and engaged in many government/industry funded research projects to solve real-world problems.</span></p>
 
 <p><span class="style11"> <strong> Ongoing </strong> </span></p>
 
