--- a/alumni.html
+++ b/alumni.html
@@ -120,6 +120,10 @@ I have been co-advising and/or working closely with many students/PDRAs mainly f
 
 
 <p><span class="style11"><strong> Former MSc. Students (by Research) @BeihangU </strong></span></p> 
+<p><span class="style11">&bull; Weihan Jiang (2022.9 - 2024.12, co-supervised w/ Prof. Tianyu Wo, first employment at ByteDance) </span></p>
+<p><span class="style11">&bull; Tianyu Ye (2022.9 - 2024.12,co-supervised w/ Prof. Tianyu Wo, first employment at Alibaba) </span></p>
+<p><span class="style11">&bull; Ziyang Liu (2022.9 - 2024.12,co-supervised w/ Prof. Chunming Hu) </span></p>
+<p><span class="style11">&bull; Yuanfeng Luo (2022.9 - 2024.12, co-supervised w/ Prof. Chunming Hu, current employment at Meituan) </span></p>
 <p><span class="style11">&bull; Tao Yan (2021.9-2023.12, co-supervised w/ Prof. Tianyu Wo, first employment at Alibaba) </span></p>
 <p><span class="style11">&bull; Pexi Li (2021.9-2023.12, co-supervised w/ Prof. Chunming Hu, first employment at ByteDance)</span></p> 
 <p><span class="style11">&bull; Kuoran Zhuang (2021.9-2023.12, co-supervised w/ Prof. Tianyu Wo, first employment at a Quant Fund Company)</span></p> 
