--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ p{ margin:10px auto}
 <p class="STYLE17">&nbsp;Associate Professor, <a href="https://soft.buaa.edu.cn" style="text-decoration: none">School of Software</a>, <a href="https://www.buaa.edu.cn" style="text-decoration: none">Beihang University</a>, China</p>
 <p class="STYLE17">&nbsp;Co-Director of Reliable, Automated and Intelligent Distributed Systems Lab (RAIDS Lab)</p>
 
-<p class="style11">&nbsp;<strong>Office</strong>:&nbsp; D306 New Main Building &nbsp;</p>
+<p class="style11">&nbsp;<strong>Office</strong>:&nbsp; Room 823, Block C, New Main Building &nbsp;</p>
 
 <p class="style11">&nbsp;<strong>Location</strong>:&nbsp; #37 Xueyuan Rd., Haidian District, Beijing, China &nbsp;</p>
 
@@ -197,7 +197,7 @@ p{ margin:10px auto}
 
 <p><span class="style11"> <img src="icons/bell.gif" width="14" height="12" border="0"/> <span class="red">[Call for Papers]</span> <a href="call4papers/Electronics-SI.pdf" style="text-decoration: none">"Machine Intelligent Information and Efficient Systems"</a> Special Issue in the journal of Electronics (SCI-indexed, IF=2.690), deadline extended to <span class="red">14 October 2024</span> </span></p>
 
-<p><span class="style11"> <img src="icons/bell.gif" width="14" height="12" border="0"/>  <span class="red">(01/12/2024) Two new 36-month projects awarded (PI) by National Key Research and Development Programme and National Youth Fellowship. A few PhD Student and Postdoc positions will open soon! </span> Drop me emails if you are interested... </span></p>
+<p><span class="style11"> <img src="icons/bell.gif" width="14" height="12" border="0"/>  <span class="red">(01/12/2024) Two new 36-month projects awarded (PI) by National Key Research and Development Programme and National *** Fellowship Programme. A few PhD Student and Postdoc positions will open soon! </span> Drop me emails if you are interested... </span></p>
 
 <p><span class="style11"> 
 <p><span class="style11"> (10/12/2024) Our work on optimized pareto front of hypernetwork has been accepted by AAAI 2025. Big congrats to Hui!</span></p>
@@ -368,6 +368,8 @@ I had the opportunity to work closely with many institutes around the world and 
 
 <p><span class="style11">&bull; Towards Building, Assessing and Evolving Cloud Native Applications (¥5M), funded by National Key Research and Development Programme (2024YFB4505901), PI, 2025-2027 </span></p> 
 
+<p><span class="style11">&bull; Assuring System Resilience and Hard Real-Time (¥3M), funded by National *** Fellowship Programme, PI, 2025-2027 </span></p> 
+
 <p><span class="style11">&bull; Heterogeneity-aware Scheduling for Generative Recommendation Models (¥1.5M), funded by Huawei Research Fund, PI, 2025-2027 </span></p> 
 
 <p><span class="style11">&bull; Effective Scheduling for Multi-tenant AI Clusters (¥300K), funded by National Natural Science Foundation of China, PI, 2025-2027 </span></p> 
@@ -375,8 +377,6 @@ I had the opportunity to work closely with many institutes around the world and 
 <p><span class="style11">&bull; Time Series Anomaly Detection for Managing Data and Devices in Production Process at Scale (¥300K), funded by Beijing Natural Science Foundation, PI, 2025-2027 </span></p> 
 
 <p><span class="style11">&bull; Enhancing Model Training and Inference (¥500K), funded by Kuaishou Research Funding, PI, 2024 - 2025  </span></p> 
-
-<p><span class="style11">&bull; Efficient Resource Scheduling for Intelligent Computing Infrastructures (¥200K), funded by Advanced Multidisciplinary Research Programme, Beihang University, PI, 2024 - 2025  </span></p> 
 
 <p><span class="style11">&bull; Multi-Modal Learning for Device Defect Detection in Extreme Conditions (¥200K), funded by University Research Programme, Beihang University, PI, 2024 - 2025  </span></p> 
 
@@ -388,6 +388,8 @@ I had the opportunity to work closely with many institutes around the world and 
 
 
 <p><span class="style11"> <strong> Completed </strong> </span></p>
+
+<p><span class="style11">&bull; Efficient Resource Scheduling for Intelligent Computing Infrastructures (¥200K), funded by Advanced Multidisciplinary Research Programme, Beihang University, PI, 2024 - 2025  </span></p> 
 
 <p><span class="style11">&bull; Cloud Native Technology: Theory and Practice (¥100K), funded by Digital Textbook Funding Programme, Beihang University, PI, 2024 </span></p> 
 
@@ -437,13 +439,12 @@ I had the opportunity to work closely with many institutes around the world and 
 <p><span class="style11">&bull; Hui Wang (2023.9- , BeihangU, w/ Prof. Xudong Liu): AAAI'25, ICME'24, ICASSP'23 </span></p>
 <p><span class="style11">&bull; Yihui Zhang (2023.9- , BeihangU, w/ Prof. Tianyu Wo) </span></p>
 <p><span class="style11">&bull; Jinghao Wang (2023.5- , BeihangU, w/ Prof. Chunming Hu and Dr. Xu Wang): JCC'24 Best Paper </span></p> 
-<p><span class="style11">&bull; Yang Zhang (2023.9- , BeihangU, w/ Prof. Chunming Hu) </span></p> 
+<p><span class="style11">&bull; Yang Zhang (2023.9- , BeihangU, National College of Elite Engineering, w/ Prof. Chunming Hu) </span></p> 
 </div>
 
 <p><span class="style11"><strong>MSc Students</strong> </span></p>
-<p><span class="style11">&bull; [Class 2022] Weihan Jiang, Tianyu Ye, Ziyang Liu, Di Wang (co-supervised w/ Prof. Tianyu Wo/Chunming Hu) </span></p>
 <p><span class="style11">&bull; [Class 2023] Zhida Jiang, Yilong Li, Zeying Wang (co-supervised w/ Prof. Tianyu Wo/Chunming Hu) </span></p>
-<p><span class="style11">&bull; [Class 2024] Zexin Wu; Shiyi Huang (w/ Dr. Xu Wang), Yujie Wang, Yuxuan Chen (w/ Prof. Tianyu Wo/Xudong Liu)</span></p>
+<p><span class="style11">&bull; [Class 2024] Zexin Wu; Mingming Zhang, Yujie Wang, Yuxuan Chen (w/ Prof. Tianyu Wo/Xudong Liu)</span></p>
 <p><span class="style11">&bull; [Class 2025] Yitang Yang</span></p>
 <p><span class="style11">&bull; [Part Time] Yao Zhang, Lu Pei, Xiaoyu Liu, Tianyou Zeng, Zhiqi Zhang, Haiyang Tang </span></p>
 
@@ -491,7 +492,7 @@ I had the opportunity to work closely with many institutes around the world and 
 
 <p><span class="Bolder"><!--img src="icons/award-banner.png" width="25" height="25" border="0"/-->Selected Awards</span><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp;</span></p>
 
-<p><span class="style11">&bull;	  <strong>China National *** Youth Fellowship</strong>, 2024 </p>
+<p><span class="style11">&bull;	  <strong>China National  *** Fellowship</strong>, 2024 </p>
 <p><span class="style11">&bull;	  <strong>Best Paper Award</strong> of IEEE Joint Cloud Conference (JCC), 2024 </p>
 
 <p><span class="style11">&bull;	  <strong>UK Alan Turing Institute Post-Doctoral Enrichment Award</strong>, 2022 </p>
