--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@ p{ margin:10px auto}
 	deep learning systems and applications such as graph representation learning, anomaly detection, etc.
 </span>
 
-<p><span class="style11"> I have published 70+ refereed journal and conference papers (<a href="http://scholar.google.com/citations?user=H_x5laoAAAAJ&hl=en" style="text-decoration: none">Googe Scholar</a> 3,300+ citations, h-index=27, as of Jan. 2025), 
+<p><span class="style11"> I have published 70+ refereed journal and conference papers (<a href="http://scholar.google.com/citations?user=H_x5laoAAAAJ&hl=en" style="text-decoration: none">Googe Scholar</a> ~3,600 citations, h-index=27, as of April 2025), 
 	including top ACM/IEEE Transactions and conference proceedings such as TPDS, TC, TKDE, TNNLS, TSC, TOIS, ACM Computing Surveys (CSUR), 
 	EuroSys, SC, SoCC, ICDCS, DSN, VLDB, ICDE, WWW, KDD, AAAI, IJCAI, etc. I received the Best Paper Award of IEEE ISADS 2013 and IEEE JCC 2024, and awarded Alan Turing Institute Post-Doctoral 
 	Enrichment Award 2022 and the Grand Class of Scientific and 
@@ -362,6 +362,8 @@ I had the opportunity to work closely with many institutes around the world and 
 
 <p><span class="style11">&bull; Time Series Anomaly Detection for Managing Data and Devices in Production Process at Scale (¥300K), funded by Beijing Natural Science Foundation, PI, 2025-2027 </span></p> 
 
+<p><span class="style11">&bull; Light-weight Web Assembly Runtime Engine (¥800K), funded by CASIC, PI, 2025 - 2026  </span></p> 
+
 <p><span class="style11">&bull; Enhancing Model Training and Inference (¥500K), funded by Kuaishou Research Funding, PI, 2024 - 2025  </span></p> 
 
 <p><span class="style11">&bull; Multi-Modal Learning for Device Defect Detection in Extreme Conditions (¥200K), funded by University Research Programme, Beihang University, PI, 2024 - 2025  </span></p> 
@@ -422,11 +424,13 @@ I had the opportunity to work closely with many institutes around the world and 
 <p><span class="style11">&bull; Hui Wang (2021.9- , BeihangU, w/ Prof. Xudong Liu): AAAI'25, ICME'24, ICASSP'23 </span></p>
 <p><span class="style11">&bull; <a href="https://williamericcheung.github.io/" style="text-decoration: none">Yihui Zhang</a> (2023.9- , BeihangU, w/ Prof. Tianyu Wo) </span></p>
 <p><span class="style11">&bull; Jinghao Wang (2023.9- , BeihangU, w/ Prof. Chunming Hu and Dr. Xu Wang): JCC'24 Best Paper </span></p> 
-<p><span class="style11">&bull; Yang Zhang (2023.9- , BeihangU, National College of Elite Engineering, w/ Prof. Chunming Hu) </span></p> 
+<p><span class="style11">&bull; Yang Zhang (2023.9- , BeihangU, National College of Elite Engineering, part time, w/ Prof. Chunming Hu) </span></p> 
 <p><span class="style11">&bull; Junhong Liu (2024.9- , BeihangU) </span></p> 
-<p><span class="style11">&bull; Huaqiang Qiu (2024.9- , BeihangU, National College of Elite Engineering) </span></p> 
+<p><span class="style11">&bull; Huaqiang Qiu (2024.9- , BeihangU, National College of Elite Engineering, part time) </span></p> 
 <p><span class="style11">&bull; Zhuoren Ye (2024.12- , BeihangU, w/ Prof. Tianyu Wo) </span></p> 
 <p><span class="style11">&bull; Yuzheng Zhang (2025.9- , BeihangU) </span></p> 
+<p><span class="style11">&bull; Dawei Gao (2025.9- , BeihangU, National College of Elite Engineering, part time) </span></p> 
+<p><span class="style11">&bull; Runnan Gu (2025.9- , BeihangU, National College of Elite Engineering, part time) </span></p> 
 </div>
 
 <p><span class="style11"><strong>MSc Students</strong> </span></p>
@@ -475,22 +479,25 @@ I had the opportunity to work closely with many institutes around the world and 
 
 <p><span class="style11">&bull; Area/Track Chair: International Conference on Big Data Computing and Communications (BigCom) 2025, IEEE International Conference on Cloud Computing (CLOUD) 2021. </span></p>
 
-<p><span class="style11">&bull; PC Member: IJCAI, ECAI, AAAI, CLOUD, UCC, HPCC, etc. </span></p>
+<p><span class="style11">&bull; PC Member: IJCAI, ECAI, AAAI, ICCV, CLOUD, UCC, HPCC, etc. </span></p>
 
-<p><span class="style11">&bull; Journal Reviewers: TPDS, TDSC, TC, TKDE, TSC, TSE, TCC, TKDD, CSUR, etc. </span></p> 
+<p><span class="style11">&bull; Journal Reviewers: TPDS, TDSC, TC, TKDE, TSC, TIFS, TSE, TCC, TKDD, CSUR, etc. </span></p> 
 
 <p><span class="style11">&bull; More professional services can be found here: <a href="services.html" style="text-decoration: none">~$ services</a> </span></p>
 
 <p><span class="Bolder"><!--img src="icons/award-banner.png" width="25" height="25" border="0"/-->Selected Awards</span><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp;</span></p>
 
 <p><span class="style11">&bull;	  <strong>China National  *** Fellowship</strong>, 2024 </p>
+
+<p><span class="style11">&bull;	  <strong>The First Class Scientific and Technological Progress Award</strong>, China General Chamber of Commerce, 2024 (2024年中国商业联合会科学进步一等奖) </p>
+
 <p><span class="style11">&bull;	  <strong>Best Paper Award</strong> of IEEE Joint Cloud Conference (JCC), 2024 </p>
 
 <p><span class="style11">&bull;	  <strong>UK Alan Turing Institute Post-Doctoral Enrichment Award</strong>, 2022 </p>
 
 <p><span class="style11">&bull;   <strong>IEEE Outstanding Service Award</strong>, IEEE JCC-SOSE, 2020 </p>
 
-<p><span class="style11">&bull;   <strong>The Grand Class of Scientific and Technological Progress Award </strong>  of Chinese Institute of Electronics, 2017 (2017年度中国电子学会科技进步特等奖) </p>
+<p><span class="style11">&bull;   <strong>The Grand Class of Scientific and Technological Progress Award </strong>, Chinese Institute of Electronics, 2017 (2017年度中国电子学会科技进步特等奖) </p>
 <p><span class="style11">&bull;   The State Scientific and Technological Progress Award, 1st Prize Nominee, 2018 (2018年度国家科学进步一等奖提名) </p>
 
 <p><span class="style11">&bull;  <strong>Outstanding Graduate Award </strong> of Beijing Graduates, 2017 </p>
