--- a/services.html
+++ b/services.html
@@ -107,9 +107,9 @@ p{ margin:10px auto}
 <p><span class="style11">&bull; Guest Editor: <a href="call4papers/Electronics-SI.pdf" style="text-decoration: none">"Machine Intelligent Information Systems"</a> Special Issue in the journal of Electronics (SCI-indexed, IF=2.690)
 <p><span class="style11">&bull;  Review Editor on the Editorial Board of Frontiers in Big Data, 2021.12 - present </span></p>
 <p><span class="style11">&bull; Review Editor on the Editorial Board of Frontiers in High Performance Computing, 2022.5 - present </span></p>
-
+<p><span class="style11">&bull;  IEEE BIGCOM 2025, Area Chair </span></p>
 <p><span class="style11">&bull;  IEEE CLOUD 2021, Area Chair </span></p>
-<p><span class="style11">&bull;  IEEE International Conference on Joint Cloud Computing (JCC), 2019, 2020, PC Co-Chair </span></p>
+<p><span class="style11">&bull;  IEEE International Conference on Joint Cloud Computing (JCC), 2019, 2020, 2025, PC Co-Chair </span></p>
 <p><span class="style11">&bull;  IEEE RTCPS 2014 (in conjuction with IEEE ISORC 2014) PC Co-Chair </span></p>
 
 <p><span class="style11"><strong> PC Member:</strong></span></p>
