--- a/index.html
+++ b/index.html
@@ -435,8 +435,8 @@ I had the opportunity to work closely with many institutes around the world and 
 
 <p><span class="style11"><strong>MSc Students</strong> </span></p>
 <p><span class="style11">&bull; [Class 2023] Zhida Jiang, <a href="https://mondaycha.github.io/" style="text-decoration: none">Yilong Li</a>, Zeying Wang (co-supervised w/ Prof. Tianyu Wo/Chunming Hu) </span></p>
-<p><span class="style11">&bull; [Class 2024] Zexin Wu; Mingming Zhang, Yujie Wang, Yuxuan Chen (w/ Prof. Tianyu Wo/Xudong Liu)</span></p>
-<p><span class="style11">&bull; [Class 2025] Yitang Yang</span></p>
+<p><span class="style11">&bull; [Class 2024] Zexin Wu; Mingming Zhang, Yujie Wang (w/ Prof. Tianyu Wo/Chunming Hu)</span></p>
+<p><span class="style11">&bull; [Class 2025] Yitang Yang, Xi Wang, Zhuocheng Ge</span></p>
 <p><span class="style11">&bull; [Part Time] Yao Zhang, Lu Pei, Xiaoyu Liu, Tianyou Zeng, Zhiqi Zhang, Haiyang Tang </span></p>
 
 <p><span class="style11"><strong>Undergraduate Research Assistants</strong> </span></p>
