--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ p{ margin:10px auto}
 	deep learning systems and applications such as graph representation learning, anomaly detection, etc.
 </span>
 
-<p><span class="style11"> I have published 70+ refereed journal and conference papers (<a href="http://scholar.google.com/citations?user=H_x5laoAAAAJ&hl=en" style="text-decoration: none">Googe Scholar</a> ~3,600 citations, h-index=27, as of April 2025), 
+<p><span class="style11"> I have published 70+ refereed journal and conference papers (<a href="http://scholar.google.com/citations?user=H_x5laoAAAAJ&hl=en" style="text-decoration: none">Googe Scholar</a> ~4,000 citations, h-index=28, as of July 2025), 
 	including top ACM/IEEE Transactions and conference proceedings such as TPDS, TC, TKDE, TNNLS, TSC, TOIS, ACM Computing Surveys (CSUR), 
 	EuroSys, SC, SoCC, ICDCS, DSN, VLDB, ICDE, WWW, KDD, AAAI, IJCAI, etc. I received the Best Paper Award of IEEE ISADS 2013 and IEEE JCC 2024, and awarded Alan Turing Institute Post-Doctoral 
 	Enrichment Award 2022 and the Grand Class of Scientific and 
@@ -419,6 +419,7 @@ I had the opportunity to work closely with many institutes around the world and 
 <p><span class="style11">&bull; Wang Xiong (2025.9- , BeihangU) </span></p> 
 <p><span class="style11">&bull; Zhuoren Ye (2025.9- , BeihangU, w/ Prof. Tianyu Wo) </span></p> 
 <p><span class="style11">&bull; Dinghao Xue (2025.9- , BeihangU, w/ Prof. Chunming Hu) </span></p> 
+<p><span class="style11">&bull; Huitian Xue (2026.9- , BeihangU) </span></p> 
 <p><span class="style11">&bull; Yang Zhang (2023.9- , BeihangU, National College of Elite Engineering, part time, w/ Prof. Chunming Hu) </span></p> 
 <p><span class="style11">&bull; Huaqiang Qiu (2024.9- , BeihangU, National College of Elite Engineering, part time) </span></p> 
 <p><span class="style11">&bull; Dawei Gao (2025.9- , BeihangU, National College of Elite Engineering, part time) </span></p> 
@@ -432,7 +433,7 @@ I had the opportunity to work closely with many institutes around the world and 
 <p><span class="style11">&bull; [Part Time] Lu Pei, Xiaoyu Liu, Tianyou Zeng, Zhiqi Zhang, Haiyang Tang, Lubo Yang, Xiang Li</span></p>
 
 <p><span class="style11"><strong>Undergraduate Research Assistants</strong> </span></p>
-<p><span class="style11">&bull; Kairui Zhang, Yihui Gong, Danyang Wu, Huitian Xue, Yao Yin, Longchun Zhao, Yuxi Luo, Yanxiang Chen </span></p>
+<p><span class="style11">&bull; Huitian Xue, Yao Yin, Yuxi Luo, Yanxiang Chen, Zhenqi Wang, Yunhan Wang, Ziyu Cheng </span></p>
 
 
 <p><span class="style11"><strong>Team Alumni</strong>: <a href="alumni.html" style="text-decoration: none">~$ alumni </a> </span></p>
